Refresh po files to match current code.

--- a/po/be@latin.po
+++ b/po/be@latin.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-03-30 23:09+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: belarusian_latin <be@latin@li.org>\n"
@@ -1878,7 +1878,7 @@ msgstr "."
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d %B %Y, %H:%M"
 
@@ -3898,136 +3898,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Kolkaść patokaŭ, jakija nie źjaŭlajucca śpiačymi."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Pakazvaje spasyłku dla zahruzki dvajkovych dadzienych pola. Vy možacie "
-"vykarystoŭvać pieršuju opcyju dla vyznačeńnia imia fajła abo "
-"vykarystoŭvajcie druhuju opcyju jak imia pola, jakoje ŭtrymlivaje imia "
-"fajła. Kali vy vykarystoŭvajecie druhuju opcyju, vam treba pakinuć pieršaje "
-"pole pustym"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Pakazvaje dadzienyja ŭ šasnaccatkovym vyhladzie. Apcyjanalny pieršy "
-"parametar vyznačaje častatu dadavańnia prahała (pa-zmoŭčańni — praz kožnyja "
-"8 bitaŭ)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Pakazvaje naciskalny eskiz; Opcyi — maksymalnaja šyrynia i vyšynia ŭ "
-"piksełach. Zachoŭvajucca pačatkovyja praporcyi."
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Pakazvaje spasyłku dla zahruzki hetaha malunku."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Prahladzieć malunak image/jpeg: ubudavany"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Pakazvaje TIME, TIMESTAMP, DATETIME albo likavuju mietku času Unix jak "
-"adfarmatavanuju datu. Pieršy parametar — heta kolkaść hadzinaŭ, jakija buduć "
-"dadadzienyja da mietki času (pa zmoŭčańni — 0). Druhi parametar "
-"vykarystoŭvajcie, kab paznačyć inšy farmat daty/času. Treci parametar "
-"vyznačaje typ daty, jakaja budzie pakazanaja: vašaja lakalnaja data albo "
-"data UTC (vykarystoŭvajcie dla hetaha parametry «local» i «utc» adpaviedna). "
-"U zaležnaści ad hetaha farmat daty maje roznyja značeńni: dla atrymańnia "
-"parametraŭ lakalnaj daty hladzicie dakumentacyju dla funkcyi PHP strftime(), "
-"a dla hrynvickaha času (parametar «utc») — dakumentacyju funkcyi gmdate()."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"TOLKI DLA LINUX: Zapuskaje źniešniuju pragramu i pieradaje joj dadzienyja "
-"pola praz standartny ŭvod. Viartaje standartny vyvad pragramy. Pragrama pa "
-"zmoŭčańni — Tidy, jakaja drukuje čysty HTML-kod. Ź mierkavańniaŭ biaśpieki, "
-"vam treba ŭručnuju adredagavać fajł libraries/transformations/"
-"text_plain__external.inc.php i paznačyć śpis pragramaŭ, jakija vy chočacie "
-"zrabić dastupnymi. Pieršaja opcyja — tady numar pragramy, jakuju vy chočacie "
-"vykarystoŭvać, druhaja opcyja — parametry dla pragramy. Treciaja opcyja, "
-"kali vyznačanaja jak 1, skanvertuje dadzienyja z standartnaha vyvadu "
-"vykarystoŭvajučy htmlspecialchars() (Pa zmoŭčańni 1). Čaćviertaja opcyja, "
-"kali vyznačanaja jak 1, praduchilić pieranos pa słovach, kab pierakanacca, "
-"što ŭvieś vychadny patok budzie vyviedzieny ŭ adzin radok (Pa zmoŭčańni 1)."
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"Pakazvaje źmieściva pola jak jość, biez apracoŭki jaho funkcyjaj "
-"htmlspecialchars(). Tamu razumiejecca, što pole ŭtrymlivaje karektny HTML-"
-"kod."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Pakazvaje malunak i spasyłku, pole źmiaščaje nazvu fajła. Pieršaja opcyja — "
-"prefiks adrasu kštałtu \"http://www.example.com/\". Druhaja i treciaja opcyi "
-"— šyrynia i vyšynia ŭ piksełach."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Pakazvaje spasyłku; pole źmiaščaje nazvu fajła. Pieršaja opcyja — prefiks "
-"adrasu kštałtu \"http://www.example.com/\". Druhaja opcyja — nazva spasyłki."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Farmatuje tekst jak SQL-zapyt z padśviečanym syntaksisam."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Pakazvaje tolki častku radka. Pieršaja opcyja — kolkaść symbalaŭ ad pačatku "
-"radka, jakija treba prapuścić (Pa zmoŭčańni 0). Druhaja opcyja — kolkaść "
-"symbalaŭ, jakija treba viarnuć (Pa zmoŭčańni: da kanca radka). Treciaja "
-"opcyja — radok, jaki treba dałučyć da kanca i/abo z pačatku radka, kali "
-"adbudziecca ŭsiačeńnie (Pa zmoŭčańni: \"...\") ."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4674,7 +4544,7 @@ msgstr "Nijakaja"
 msgid "As defined:"
 msgstr "Jak vyznačana:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4711,6 +4581,139 @@ msgstr "Treba dadać prynamsi adno pole."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Padzieja"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Pakazvaje spasyłku dla zahruzki dvajkovych dadzienych pola. Vy možacie "
+"vykarystoŭvać pieršuju opcyju dla vyznačeńnia imia fajła abo "
+"vykarystoŭvajcie druhuju opcyju jak imia pola, jakoje ŭtrymlivaje imia "
+"fajła. Kali vy vykarystoŭvajecie druhuju opcyju, vam treba pakinuć pieršaje "
+"pole pustym"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Pakazvaje dadzienyja ŭ šasnaccatkovym vyhladzie. Apcyjanalny pieršy "
+"parametar vyznačaje častatu dadavańnia prahała (pa-zmoŭčańni — praz kožnyja "
+"8 bitaŭ)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Pakazvaje naciskalny eskiz; Opcyi — maksymalnaja šyrynia i vyšynia ŭ "
+"piksełach. Zachoŭvajucca pačatkovyja praporcyi."
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Pakazvaje spasyłku dla zahruzki hetaha malunku."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Pakazvaje TIME, TIMESTAMP, DATETIME albo likavuju mietku času Unix jak "
+"adfarmatavanuju datu. Pieršy parametar — heta kolkaść hadzinaŭ, jakija buduć "
+"dadadzienyja da mietki času (pa zmoŭčańni — 0). Druhi parametar "
+"vykarystoŭvajcie, kab paznačyć inšy farmat daty/času. Treci parametar "
+"vyznačaje typ daty, jakaja budzie pakazanaja: vašaja lakalnaja data albo "
+"data UTC (vykarystoŭvajcie dla hetaha parametry «local» i «utc» adpaviedna). "
+"U zaležnaści ad hetaha farmat daty maje roznyja značeńni: dla atrymańnia "
+"parametraŭ lakalnaj daty hladzicie dakumentacyju dla funkcyi PHP strftime(), "
+"a dla hrynvickaha času (parametar «utc») — dakumentacyju funkcyi gmdate()."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"TOLKI DLA LINUX: Zapuskaje źniešniuju pragramu i pieradaje joj dadzienyja "
+"pola praz standartny ŭvod. Viartaje standartny vyvad pragramy. Pragrama pa "
+"zmoŭčańni — Tidy, jakaja drukuje čysty HTML-kod. Ź mierkavańniaŭ biaśpieki, "
+"vam treba ŭručnuju adredagavać fajł libraries/transformations/"
+"text_plain__external.inc.php i paznačyć śpis pragramaŭ, jakija vy chočacie "
+"zrabić dastupnymi. Pieršaja opcyja — tady numar pragramy, jakuju vy chočacie "
+"vykarystoŭvać, druhaja opcyja — parametry dla pragramy. Treciaja opcyja, "
+"kali vyznačanaja jak 1, skanvertuje dadzienyja z standartnaha vyvadu "
+"vykarystoŭvajučy htmlspecialchars() (Pa zmoŭčańni 1). Čaćviertaja opcyja, "
+"kali vyznačanaja jak 1, praduchilić pieranos pa słovach, kab pierakanacca, "
+"što ŭvieś vychadny patok budzie vyviedzieny ŭ adzin radok (Pa zmoŭčańni 1)."
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"Pakazvaje źmieściva pola jak jość, biez apracoŭki jaho funkcyjaj "
+"htmlspecialchars(). Tamu razumiejecca, što pole ŭtrymlivaje karektny HTML-"
+"kod."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Pakazvaje malunak i spasyłku, pole źmiaščaje nazvu fajła. Pieršaja opcyja — "
+"prefiks adrasu kštałtu \"http://www.example.com/\". Druhaja i treciaja opcyi "
+"— šyrynia i vyšynia ŭ piksełach."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Pakazvaje spasyłku; pole źmiaščaje nazvu fajła. Pieršaja opcyja — prefiks "
+"adrasu kštałtu \"http://www.example.com/\". Druhaja opcyja — nazva spasyłki."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Farmatuje tekst jak SQL-zapyt z padśviečanym syntaksisam."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Pakazvaje tolki častku radka. Pieršaja opcyja — kolkaść symbalaŭ ad pačatku "
+"radka, jakija treba prapuścić (Pa zmoŭčańni 0). Druhaja opcyja — kolkaść "
+"symbalaŭ, jakija treba viarnuć (Pa zmoŭčańni: da kanca radka). Treciaja "
+"opcyja — radok, jaki treba dałučyć da kanca i/abo z pačatku radka, kali "
+"adbudziecca ŭsiačeńnie (Pa zmoŭčańni: \"...\") ."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8231,6 +8234,9 @@ msgstr "Nazva prahladu"
 #: view_operations.php:93
 msgid "Rename view to"
 msgstr ""
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Prahladzieć malunak image/jpeg: ubudavany"
 
 #, fuzzy
 #~| msgid "\"zipped\""
