--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-05-16 13:33+0200\n"
 "Last-Translator: Marc <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
@@ -1825,7 +1825,7 @@ msgstr ","
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%A %d %B %Y à %H:%M"
 
@@ -3840,134 +3840,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Le nombre de fils d'exécution non suspendus."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Affiche un lien pour télécharger le contenu binaire d'une colonne. La "
-"première option est le nom du fichier binaire;  la seconde option est le nom "
-"de la colonne contenant le nom du fichier. Si vous utilisez la seconde "
-"option, veuillez laisser la première option vide."
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Affiche une représentation hexadécimale des données. Le premier paramètre "
-"est optionnel et spécifie à quel intervalle un espace sera ajouté (par "
-"défaut, à chaque 2 nibbles)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Affiche une image timbre-poste cliquable. Les options sont: largeur,hauteur "
-"en pixels. Le rapport original de l'image est préservé."
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Affiche un lien vers cette image"
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Voir image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Affiche un champ TIME, TIMESTAMP, DATETIME ou un champ numérique contenant "
-"une valeur TIMESTAMP UNIX en tant que date formatée. La première option est "
-"le décalage (en heures) à ajouter (par défaut, 0). La seconde option sert à "
-"indiquer le format de date ou d'heure. La troisième option détermine si vous "
-"voulez la date locale («local») ou UTC («utc»). Pour le format «local», le "
-"second paramètre utilise le format de la fonction PHP strftime() et pour le "
-"format «utc», il utilise la fonction gmdate()."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"(Linux seulement) Exécute un programme externe et lui envoie le contenu du "
-"champ via l'entrée standard. Puis capture la sortie standard de ce programme "
-"externe. Le programme par défaut est tidy, pour un affichage embelli du code "
-"HTML. Pour des raisons de sécurité, vous devez éditer le script libraries/"
-"transformations/text_plain__external.inc.php et y insérer les noms de "
-"programme externe possibles. La première option est le numéro du programme "
-"que vous voulez utiliser, la seconde option contient les paramètres pour ce "
-"programme. En troisième option, une valeur de 1 va convertir le résultat "
-"avec la fonction htmlspecialchars() (par défaut, 1). En option 4, une valeur "
-"de 1 va ajouter NOWRAP à la cellule affichée (par défaut, 1)."
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"Préserve le contenu original du champ, sans ajout de caractères "
-"d'échappement avec la fonction htmlspecialchars(). Donc il est assumé que le "
-"champ contient du HTML valide."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Affiche une image et un lien, le champ contient le nom du fichier. La "
-"première option est un préfixe URL tel que «http://www.example.com/». La "
-"seconde option est la largeur en pixels et la troisième option est la "
-"hauteur en pixels."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Affiche un lien, le champ contient le nom du fichier; en première option, un "
-"préfixe comme «http://www.example.com/», en seconde option, un titre pour le "
-"lien."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr ""
-"Affiche le texte comme une requête SQL avec embellissement de la syntaxe."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"N'affiche qu'une partie du champ. En première option, la position de départ "
-"(par défaut, 0). En seconde option, le nombre de caractères à afficher (par "
-"défaut, le reste). En troisième option, des caractères à afficher à la fin "
-"du texte (par défaut: «...»)."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4620,7 +4492,7 @@ msgstr "aucune"
 msgid "As defined:"
 msgstr "Tel que défini :"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4657,6 +4529,137 @@ msgstr "Vous devez ajouter au moins un champ"
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Événement"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Affiche un lien pour télécharger le contenu binaire d'une colonne. La "
+"première option est le nom du fichier binaire;  la seconde option est le nom "
+"de la colonne contenant le nom du fichier. Si vous utilisez la seconde "
+"option, veuillez laisser la première option vide."
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Affiche une représentation hexadécimale des données. Le premier paramètre "
+"est optionnel et spécifie à quel intervalle un espace sera ajouté (par "
+"défaut, à chaque 2 nibbles)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Affiche une image timbre-poste cliquable. Les options sont: largeur,hauteur "
+"en pixels. Le rapport original de l'image est préservé."
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Affiche un lien vers cette image"
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Affiche un champ TIME, TIMESTAMP, DATETIME ou un champ numérique contenant "
+"une valeur TIMESTAMP UNIX en tant que date formatée. La première option est "
+"le décalage (en heures) à ajouter (par défaut, 0). La seconde option sert à "
+"indiquer le format de date ou d'heure. La troisième option détermine si vous "
+"voulez la date locale («local») ou UTC («utc»). Pour le format «local», le "
+"second paramètre utilise le format de la fonction PHP strftime() et pour le "
+"format «utc», il utilise la fonction gmdate()."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"(Linux seulement) Exécute un programme externe et lui envoie le contenu du "
+"champ via l'entrée standard. Puis capture la sortie standard de ce programme "
+"externe. Le programme par défaut est tidy, pour un affichage embelli du code "
+"HTML. Pour des raisons de sécurité, vous devez éditer le script libraries/"
+"transformations/text_plain__external.inc.php et y insérer les noms de "
+"programme externe possibles. La première option est le numéro du programme "
+"que vous voulez utiliser, la seconde option contient les paramètres pour ce "
+"programme. En troisième option, une valeur de 1 va convertir le résultat "
+"avec la fonction htmlspecialchars() (par défaut, 1). En option 4, une valeur "
+"de 1 va ajouter NOWRAP à la cellule affichée (par défaut, 1)."
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"Préserve le contenu original du champ, sans ajout de caractères "
+"d'échappement avec la fonction htmlspecialchars(). Donc il est assumé que le "
+"champ contient du HTML valide."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Affiche une image et un lien, le champ contient le nom du fichier. La "
+"première option est un préfixe URL tel que «http://www.example.com/». La "
+"seconde option est la largeur en pixels et la troisième option est la "
+"hauteur en pixels."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Affiche un lien, le champ contient le nom du fichier; en première option, un "
+"préfixe comme «http://www.example.com/», en seconde option, un titre pour le "
+"lien."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr ""
+"Affiche le texte comme une requête SQL avec embellissement de la syntaxe."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"N'affiche qu'une partie du champ. En première option, la position de départ "
+"(par défaut, 0). En seconde option, le nombre de caractères à afficher (par "
+"défaut, le reste). En troisième option, des caractères à afficher à la fin "
+"du texte (par défaut: «...»)."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8398,6 +8401,9 @@ msgstr "Nom de la vue"
 #: view_operations.php:93
 msgid "Rename view to"
 msgstr "Changer le nom de la vue pour"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Voir image/jpeg: inline"
 
 #~ msgid "zipped"
 #~ msgstr "zippé"
