--- a/po/nl.po
+++ b/po/nl.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-03-26 15:46+0200\n"
 "Last-Translator:  <rink@initfour.nl>\n"
 "Language-Team: dutch <nl@li.org>\n"
@@ -1880,7 +1880,7 @@ msgstr ","
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d %B %Y om %H:%M"
 
@@ -3905,133 +3905,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Het aantal threads dat actief bezig is."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Toon een link om de binaire data van een veld te downloaden. De eerste optie "
-"is de bestandsnaam van het binaire bestand, de tweede optie is een mogelijke "
-"veldnaam van een rij van de tabel, welke de bestandsnaam bevat. Wanneer de "
-"tweede optie wordt gekozen is het vereist dat de eerste optie leeg is."
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Toont hexadecimale weergave van gegevens. De optionele parameter geeft aan "
-"wanneer er een spatie moet worden opgenomen (standaard elke 2 nibbles)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Toont een klikbare miniatuurweergave; opties: maximale breedte en hoogte in "
-"pixels (behoudt de originele verhouding)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Toont een link naar deze afbeelding (directe blob download, i.e.)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Zie image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Toont een TIME, TIMESTAMP, DATETIME of numeriek unix timestamp veld als een "
-"opgemaakte datum. De eerste optie is de offset (in uren) welke aan de "
-"timestamp zal worden toegevoegd (Standaard: 0). De tweede optie kan worden "
-"gebruikt om een alternatieve opmaak te specificeren. Als derde optie kan "
-"worden opgegeven of de lokale tijd, of de UTC variant moet worden gebruikt "
-"(gebruik \"local\" of \"utc\"). Afhangkelijk hiervan verschilt de opmaak "
-"code - voor \"local\" zie de documentatie van PHP's strftime() functie en "
-"voor \"utc\" de gmdate() function."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"ALLEEN LINUX: Start een externe applicatie op en voedt het veld data via "
-"standaard input. Geeft standaard output van de applicatie terug. Standaard "
-"is Netjes, om nette HTML code te tonen. Om beveiligingsredenen zult u "
-"handmatig het bestand libraries/transformations/text_plain__external.inc.php "
-"moeten aanpassen en de tools die u mag draaien invoegen. De eerste opties is "
-"het nummer van het programma wat u wilt gebruiken, de tweede optie zijn de "
-"parameters voor dit programma. De derde parameter, wanneer ingesteld op 1, "
-"zal de output omzetten door middel van htmlspecialchars() (Standaard is 1). "
-"Een vierde parameter, wanneer ingesteld als 1 zal NOWRAP aan de content cell "
-"toevoegen, zodat de gehele output getoond zal worden zonder te "
-"herstructureren (Standaard 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"Preserveert het originele formaat van het veld. Er wordt geen Escaping "
-"toegepast."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Toont een plaatje en een link, het veld bevat de bestandsnaam. De eerste "
-"optie is een prefix als \"http://domein.com/\", de tweede optie is de "
-"breedte in pixels, de derde is de hoogte."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Toont een link, het veld bevat de bestandsnaam. De eerste optie is een "
-"prefix als \"http://domein.com/\", de tweede optie is de titel voor de link."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Maakt de tekst op als een SQL-query met syntax markeringen."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Toont alleen een stuk van een string. De eerst optie is een offset om te "
-"bepalen waar de output van uw tekst start (Standaard 0). De tweede optie is "
-"een offset van de hoeveelheid tekst die terug wordt gegeven. Wanneer leeg, "
-"zal alle overgebleven tekst worden teruggeven. De derde optie definieert "
-"welke karakters worden toegevoegd aan de output wanneer een substring wordt "
-"teruggegeven (Standaard: ...) ."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4681,7 +4554,7 @@ msgstr "Geen"
 msgid "As defined:"
 msgstr "Als aangegeven:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4718,6 +4591,136 @@ msgstr "U moet minimaal een veld toevoegen."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Gebeurtenis"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Toon een link om de binaire data van een veld te downloaden. De eerste optie "
+"is de bestandsnaam van het binaire bestand, de tweede optie is een mogelijke "
+"veldnaam van een rij van de tabel, welke de bestandsnaam bevat. Wanneer de "
+"tweede optie wordt gekozen is het vereist dat de eerste optie leeg is."
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Toont hexadecimale weergave van gegevens. De optionele parameter geeft aan "
+"wanneer er een spatie moet worden opgenomen (standaard elke 2 nibbles)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Toont een klikbare miniatuurweergave; opties: maximale breedte en hoogte in "
+"pixels (behoudt de originele verhouding)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Toont een link naar deze afbeelding (directe blob download, i.e.)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Toont een TIME, TIMESTAMP, DATETIME of numeriek unix timestamp veld als een "
+"opgemaakte datum. De eerste optie is de offset (in uren) welke aan de "
+"timestamp zal worden toegevoegd (Standaard: 0). De tweede optie kan worden "
+"gebruikt om een alternatieve opmaak te specificeren. Als derde optie kan "
+"worden opgegeven of de lokale tijd, of de UTC variant moet worden gebruikt "
+"(gebruik \"local\" of \"utc\"). Afhangkelijk hiervan verschilt de opmaak "
+"code - voor \"local\" zie de documentatie van PHP's strftime() functie en "
+"voor \"utc\" de gmdate() function."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"ALLEEN LINUX: Start een externe applicatie op en voedt het veld data via "
+"standaard input. Geeft standaard output van de applicatie terug. Standaard "
+"is Netjes, om nette HTML code te tonen. Om beveiligingsredenen zult u "
+"handmatig het bestand libraries/transformations/text_plain__external.inc.php "
+"moeten aanpassen en de tools die u mag draaien invoegen. De eerste opties is "
+"het nummer van het programma wat u wilt gebruiken, de tweede optie zijn de "
+"parameters voor dit programma. De derde parameter, wanneer ingesteld op 1, "
+"zal de output omzetten door middel van htmlspecialchars() (Standaard is 1). "
+"Een vierde parameter, wanneer ingesteld als 1 zal NOWRAP aan de content cell "
+"toevoegen, zodat de gehele output getoond zal worden zonder te "
+"herstructureren (Standaard 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"Preserveert het originele formaat van het veld. Er wordt geen Escaping "
+"toegepast."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Toont een plaatje en een link, het veld bevat de bestandsnaam. De eerste "
+"optie is een prefix als \"http://domein.com/\", de tweede optie is de "
+"breedte in pixels, de derde is de hoogte."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Toont een link, het veld bevat de bestandsnaam. De eerste optie is een "
+"prefix als \"http://domein.com/\", de tweede optie is de titel voor de link."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Maakt de tekst op als een SQL-query met syntax markeringen."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Toont alleen een stuk van een string. De eerst optie is een offset om te "
+"bepalen waar de output van uw tekst start (Standaard 0). De tweede optie is "
+"een offset van de hoeveelheid tekst die terug wordt gegeven. Wanneer leeg, "
+"zal alle overgebleven tekst worden teruggeven. De derde optie definieert "
+"welke karakters worden toegevoegd aan de output wanneer een substring wordt "
+"teruggegeven (Standaard: ...) ."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8521,6 +8524,9 @@ msgstr "VIEW-naam"
 #, fuzzy
 msgid "Rename view to"
 msgstr "Tabel hernoemen naar"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Zie image/jpeg: inline"
 
 #, fuzzy
 #~| msgid "\"zipped\""
