--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-05-17 04:57+0200\n"
 "Last-Translator: shanyan baishui <Siramizu@gmail.com>\n"
 "Language-Team: chinese_simplified <zh_CN@li.org>\n"
@@ -1773,7 +1773,7 @@ msgstr "."
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%Y 年 %m 月 %d 日 %H:%M"
 
@@ -3674,116 +3674,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "非睡眠状态的线程数量。"
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"字段中显示一个二进制数据的下载连接。第一个选项是文件名，或使用第二个选项，用"
-"表中的一个字段作为文件名。如果你使用第二个选项那么第一个选项必须留空。"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"显示十六进制的数据。第一个参数设置需要增加多少个空格 (默认值为一个字节宽度)。"
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr "显示可点击的缩略图。在原比例不变的情况下，可按像素指定最大宽度或高度。"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "显示下载此图像的链接。"
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "参见 image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"将一个 TIME、TIMESTAMP、DATETIME 或数字 UNIX 时间戳字段格式化显示为日期。第一"
-"个选项是小时偏移量，该值将加到时间戳中 (默认：0)。第二个选项用于指定时间格式"
-"字符串。第三个选项决定显示本地时间还是 UTC 时间 (填入“local”或“utc”)，所以"
-"填“local”(参见 PHP 的 strftime() 函数文档)和“utc”(参见 PHP 的 gmdate() 函数文"
-"档)所到的结果是不一样的。"
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"仅 LINUX：调用外部程序并通过标准输入填充字段数据。返回此应用程序的标准输出。"
-"默认为 Tidy，可以很好的打印 HTML 代码。为了安全起见，您需要手动编辑文件 "
-"libraries/transformations/text_plain__external.inc.php 然后插入允许您运行的工"
-"具。第一个选项是您想要使用的程序编号，而第二个选项是程序的参数。第三个参数如"
-"果设为 1 的话将会用 htmlspecialchars() 转换其输出 (默认为 1)。第四个参数如果"
-"设为 1 的话，将禁止换行，确保所有内容显示在一行中 (默认为 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"显示字段的原始内容，不使用 htmlspecialchars() 处理。即假定内容为合法的 HTML "
-"代码。"
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"显示图像和链接，字段内包含文件名。第一个选项是类似“http://www.example.com/”这"
-"样的 URL 前缀，第二和第三个选项是以像素为单位的宽度和高度。"
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"显示链接，字段内包含文件名。第一个选项是类似“http://www.example.com/”这样的 "
-"URL 前缀，第二个选项是链接的标题 (title)。"
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "将文本以 SQL 语法高亮显示。"
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"显示部分字符串。第一个选项定义了文本开始输出的字数 (默认为 0)。第二个选项是要"
-"返回的字数 (默认直到结尾)。第三个选项是当发生截取的时候，将会加在字符串之前/"
-"后的输出 (默认为：“...”)。"
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4415,7 +4305,7 @@ msgstr "无"
 msgid "As defined:"
 msgstr "定义："
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4450,6 +4340,119 @@ msgstr "至少要添加一个字段。"
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "事件"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"字段中显示一个二进制数据的下载连接。第一个选项是文件名，或使用第二个选项，用"
+"表中的一个字段作为文件名。如果你使用第二个选项那么第一个选项必须留空。"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"显示十六进制的数据。第一个参数设置需要增加多少个空格 (默认值为一个字节宽度)。"
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr "显示可点击的缩略图。在原比例不变的情况下，可按像素指定最大宽度或高度。"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "显示下载此图像的链接。"
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"将一个 TIME、TIMESTAMP、DATETIME 或数字 UNIX 时间戳字段格式化显示为日期。第一"
+"个选项是小时偏移量，该值将加到时间戳中 (默认：0)。第二个选项用于指定时间格式"
+"字符串。第三个选项决定显示本地时间还是 UTC 时间 (填入“local”或“utc”)，所以"
+"填“local”(参见 PHP 的 strftime() 函数文档)和“utc”(参见 PHP 的 gmdate() 函数文"
+"档)所到的结果是不一样的。"
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"仅 LINUX：调用外部程序并通过标准输入填充字段数据。返回此应用程序的标准输出。"
+"默认为 Tidy，可以很好的打印 HTML 代码。为了安全起见，您需要手动编辑文件 "
+"libraries/transformations/text_plain__external.inc.php 然后插入允许您运行的工"
+"具。第一个选项是您想要使用的程序编号，而第二个选项是程序的参数。第三个参数如"
+"果设为 1 的话将会用 htmlspecialchars() 转换其输出 (默认为 1)。第四个参数如果"
+"设为 1 的话，将禁止换行，确保所有内容显示在一行中 (默认为 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"显示字段的原始内容，不使用 htmlspecialchars() 处理。即假定内容为合法的 HTML "
+"代码。"
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"显示图像和链接，字段内包含文件名。第一个选项是类似“http://www.example.com/”这"
+"样的 URL 前缀，第二和第三个选项是以像素为单位的宽度和高度。"
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"显示链接，字段内包含文件名。第一个选项是类似“http://www.example.com/”这样的 "
+"URL 前缀，第二个选项是链接的标题 (title)。"
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "将文本以 SQL 语法高亮显示。"
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"显示部分字符串。第一个选项定义了文本开始输出的字数 (默认为 0)。第二个选项是要"
+"返回的字数 (默认直到结尾)。第三个选项是当发生截取的时候，将会加在字符串之前/"
+"后的输出 (默认为：“...”)。"
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8016,6 +8019,9 @@ msgstr "视图名"
 #: view_operations.php:93
 msgid "Rename view to"
 msgstr "将视图改名为"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "参见 image/jpeg: inline"
 
 #~ msgid "zipped"
 #~ msgstr "zip 压缩"
