--- a/po/be.po
+++ b/po/be.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-03-12 09:12+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: belarusian_cyrillic <be@li.org>\n"
@@ -1885,7 +1885,7 @@ msgstr "."
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d %B %Y, %H:%M"
 
@@ -3907,133 +3907,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Колькасьць патокаў, якія не зьяўляюцца сьпячымі."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Паказвае спасылку для загрузкі двайковых дадзеных поля. Вы можаце "
-"выкарыстоўваць першую опцыю для вызначэньня імя файла або выкарыстоўвайце "
-"другую опцыю як імя поля, якое ўтрымлівае імя файла. Калі вы выкарыстоўваеце "
-"другую опцыю, вам трэба пакінуць першае поле пустым"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Паказвае дадзеныя ў шаснаццатковым выглядзе. Апцыянальны першы парамэтар "
-"вызначае частату дадаваньня прагала (па-змоўчаньні — праз кожныя 8 бітаў)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Паказвае націскальны эскіз; Опцыі — максымальная шырыня і вышыня ў піксэлах. "
-"Захоўваюцца пачатковыя прапорцыі."
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Паказвае спасылку для загрузкі гэтага малюнку."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Праглядзець малюнак image/jpeg: убудаваны"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Паказвае TIME, TIMESTAMP, DATETIME альбо лікавую метку часу Unix як "
-"адфарматаваную дату. Першы парамэтар — гэта колькасьць гадзінаў, якія будуць "
-"дададзеныя да меткі часу (па змоўчаньні — 0). Другі парамэтар "
-"выкарыстоўвайце, каб пазначыць іншы фармат даты/часу. Трэці парамэтар "
-"вызначае тып даты, якая будзе паказаная: вашая лякальная дата альбо дата UTC "
-"(выкарыстоўвайце для гэтага парамэтры «local» і «utc» адпаведна). У "
-"залежнасьці ад гэтага фармат даты мае розныя значэньні: для атрыманьня "
-"парамэтраў лякальнай даты глядзіце дакумэнтацыю для функцыі PHP strftime(), "
-"а для грынвіцкага часу (парамэтар «utc») — дакумэнтацыю функцыі gmdate()."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"ТОЛЬКІ ДЛЯ LINUX: Запускае зьнешнюю праграму і перадае ёй дадзеныя поля праз "
-"стандартны ўвод. Вяртае стандартны вывад праграмы. Праграма па змоўчаньні — "
-"Tidy, якая друкуе чысты HTML-код. Зь меркаваньняў бясьпекі, вам трэба "
-"ўручную адрэдагаваць файл libraries/transformations/text_plain__external.inc."
-"php і пазначыць сьпіс праграмаў, якія вы хочаце зрабіць даступнымі. Першая "
-"опцыя — тады нумар праграмы, якую вы хочаце выкарыстоўваць, другая опцыя — "
-"парамэтры для праграмы. Трэцяя опцыя, калі вызначаная як 1, сканвэртуе "
-"дадзеныя з стандартнага вываду выкарыстоўваючы htmlspecialchars() (Па "
-"змоўчаньні 1). Чацьвертая опцыя, калі вызначаная як 1, прадухіліць перанос "
-"па словах, каб пераканацца, што ўвесь выхадны паток будзе выведзены ў адзін "
-"радок (Па змоўчаньні 1)."
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"Паказвае зьмесьціва поля як ёсьць, без апрацоўкі яго функцыяй "
-"htmlspecialchars(). Таму разумеецца, што поле ўтрымлівае карэктны HTML-код."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Паказвае малюнак і спасылку, поле зьмяшчае назву файла. Першая опцыя — "
-"прэфікс адрасу кшталту \"http://www.example.com/\". Другая і трэцяя опцыі — "
-"шырыня і вышыня ў піксэлах."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Паказвае спасылку; поле зьмяшчае назву файла. Першая опцыя — прэфікс адрасу "
-"кшталту \"http://www.example.com/\". Другая опцыя — назва спасылкі."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Фарматуе тэкст як SQL-запыт з падсьвечаным сынтаксісам."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Паказвае толькі частку радка. Першая опцыя — колькасьць сымбаляў ад пачатку "
-"радка, якія трэба прапусьціць (Па змоўчаньні 0). Другая опцыя — колькасьць "
-"сымбаляў, якія трэба вярнуць (Па змоўчаньні: да канца радка). Трэцяя опцыя — "
-"радок, які трэба далучыць да канца і/або з пачатку радка, калі адбудзецца "
-"ўсячэньне (Па змоўчаньні: \"...\") ."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4685,7 +4558,7 @@ msgstr "Няма"
 msgid "As defined:"
 msgstr "Як вызначана:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4722,6 +4595,136 @@ msgstr "Трэба дадаць прынамсі адно поле."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Падзея"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Паказвае спасылку для загрузкі двайковых дадзеных поля. Вы можаце "
+"выкарыстоўваць першую опцыю для вызначэньня імя файла або выкарыстоўвайце "
+"другую опцыю як імя поля, якое ўтрымлівае імя файла. Калі вы выкарыстоўваеце "
+"другую опцыю, вам трэба пакінуць першае поле пустым"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Паказвае дадзеныя ў шаснаццатковым выглядзе. Апцыянальны першы парамэтар "
+"вызначае частату дадаваньня прагала (па-змоўчаньні — праз кожныя 8 бітаў)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Паказвае націскальны эскіз; Опцыі — максымальная шырыня і вышыня ў піксэлах. "
+"Захоўваюцца пачатковыя прапорцыі."
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Паказвае спасылку для загрузкі гэтага малюнку."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Паказвае TIME, TIMESTAMP, DATETIME альбо лікавую метку часу Unix як "
+"адфарматаваную дату. Першы парамэтар — гэта колькасьць гадзінаў, якія будуць "
+"дададзеныя да меткі часу (па змоўчаньні — 0). Другі парамэтар "
+"выкарыстоўвайце, каб пазначыць іншы фармат даты/часу. Трэці парамэтар "
+"вызначае тып даты, якая будзе паказаная: вашая лякальная дата альбо дата UTC "
+"(выкарыстоўвайце для гэтага парамэтры «local» і «utc» адпаведна). У "
+"залежнасьці ад гэтага фармат даты мае розныя значэньні: для атрыманьня "
+"парамэтраў лякальнай даты глядзіце дакумэнтацыю для функцыі PHP strftime(), "
+"а для грынвіцкага часу (парамэтар «utc») — дакумэнтацыю функцыі gmdate()."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"ТОЛЬКІ ДЛЯ LINUX: Запускае зьнешнюю праграму і перадае ёй дадзеныя поля праз "
+"стандартны ўвод. Вяртае стандартны вывад праграмы. Праграма па змоўчаньні — "
+"Tidy, якая друкуе чысты HTML-код. Зь меркаваньняў бясьпекі, вам трэба "
+"ўручную адрэдагаваць файл libraries/transformations/text_plain__external.inc."
+"php і пазначыць сьпіс праграмаў, якія вы хочаце зрабіць даступнымі. Першая "
+"опцыя — тады нумар праграмы, якую вы хочаце выкарыстоўваць, другая опцыя — "
+"парамэтры для праграмы. Трэцяя опцыя, калі вызначаная як 1, сканвэртуе "
+"дадзеныя з стандартнага вываду выкарыстоўваючы htmlspecialchars() (Па "
+"змоўчаньні 1). Чацьвертая опцыя, калі вызначаная як 1, прадухіліць перанос "
+"па словах, каб пераканацца, што ўвесь выхадны паток будзе выведзены ў адзін "
+"радок (Па змоўчаньні 1)."
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"Паказвае зьмесьціва поля як ёсьць, без апрацоўкі яго функцыяй "
+"htmlspecialchars(). Таму разумеецца, што поле ўтрымлівае карэктны HTML-код."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Паказвае малюнак і спасылку, поле зьмяшчае назву файла. Першая опцыя — "
+"прэфікс адрасу кшталту \"http://www.example.com/\". Другая і трэцяя опцыі — "
+"шырыня і вышыня ў піксэлах."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Паказвае спасылку; поле зьмяшчае назву файла. Першая опцыя — прэфікс адрасу "
+"кшталту \"http://www.example.com/\". Другая опцыя — назва спасылкі."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Фарматуе тэкст як SQL-запыт з падсьвечаным сынтаксісам."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Паказвае толькі частку радка. Першая опцыя — колькасьць сымбаляў ад пачатку "
+"радка, якія трэба прапусьціць (Па змоўчаньні 0). Другая опцыя — колькасьць "
+"сымбаляў, якія трэба вярнуць (Па змоўчаньні: да канца радка). Трэцяя опцыя — "
+"радок, які трэба далучыць да канца і/або з пачатку радка, калі адбудзецца "
+"ўсячэньне (Па змоўчаньні: \"...\") ."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8314,6 +8317,9 @@ msgstr "Назва прагляду"
 #, fuzzy
 msgid "Rename view to"
 msgstr "Перайменаваць табліцу ў"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Праглядзець малюнак image/jpeg: убудаваны"
 
 #, fuzzy
 #~| msgid "\"zipped\""
