--- a/po/cs.po
+++ b/po/cs.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-05-22 14:33+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: czech <cs@li.org>\n"
@@ -1809,7 +1809,7 @@ msgstr "."
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%a %d. %b %Y, %H:%M"
 
@@ -3784,128 +3784,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Počet vláken, která nespí."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Zobrazí odkaz na stáhnutí dat. První parametr je jméno souboru, druhý jméno "
-"sloupce v tabulce obsahující jméno souboru. Pokud zadáte druhý parametr, "
-"první musí být prázdný."
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Zobrazí data šestnáctkově. Nepovinný parametr určuje po kolika znacích má "
-"být přidána mezera (výchozí hodnota je 2)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Zobrazí náhled obrázku s odkazem na obrázek; parametry šířka a výška "
-"v bodech. Poměr stran obrázku zůstane zachován."
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Zobrazí odkaz na obrázek (například stáhnutí pole blob)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Viz image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Zobrazí datum nebo čas (TIME, TIMESTAMP, DATETIME nebo unixový timestamp v "
-"numerickém sloupci). První parametr je posun (v hodinách), který bude přidán "
-"k času (výchozí je 0). Druhý parametr je formátovací řetězec. Třetí určuje "
-"jestli chcete zobrazit datum podle místního nastavení nebo UTC čas (použijte "
-"text „local“ nebo „utc“). Podle tohoto nastavení, formát má buďto syntaxi "
-"funkce strftime() pokud použijete „local“ nebo pro gmtime() pokud použijete "
-"„utc“."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"JEN PRO LINUX: Spustí externí program, na jeho standardní vstup pošle obsah "
-"pole a zobrazí výstup programu. Výchozí je program Tidy, který pěkně "
-"zformátuje HTML. Z bezpečnostních důvodů musíte jména povolených programů "
-"zapsat do souboru libraries/transformations/text_plain__external.inc.php. "
-"První parametr je číslo programu, který má být spuštěn a druhý parametr "
-"udává parametry tohoto programu. Třetí parametr určuje, zda mají být ve "
-"výstupu nahrazeny HTML entity (např. pro zobrazení zdrojového kódu HTML) "
-"(výchozí je 1, tedy převádět na entity), čtvrtý (při nastavení na 1) zajistí "
-"přidání parametru NOWRAP k vypisovanému textu, čímž se zachová formátování "
-"(výchozí je 1)."
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"Zachová původní formátování sloupce, tak jak je uložen v databázi, bez "
-"použití htmlspecialchars(). Předpokládá se, že sloupec obsahuje platné HTML."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Zobrazí obrázek a odkaz z pole obsahujícího odkaz na obrázek. První parametr "
-"je prefix URL (například „http://mojedomena.cz/“), druhý a třetí určuje "
-"šířku a výšku obrázku."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Zobrazí odkaz z pole obsahujícího odkaz. První parametr je prefix URL "
-"(například „http://mojedomena.cz/“), druhý text odkazu."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Zobrazí text jako SQL dotaz se zvýrazňováním syntaxe."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Zobrazí jen část textu. První parametr je posun od začátku (výchozí je 0) a "
-"druhý určuje délku textu, který se má zobrazit, pokud není uveden, bude "
-"zobrazen zbytek textu. Třetí parametr určuje, jaký text má být přidán za "
-"zkrácený text (výchozí je ...)."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4557,7 +4435,7 @@ msgstr "Žádná"
 msgid "As defined:"
 msgstr "Dle zadání:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4594,6 +4472,131 @@ msgstr "Musíte přidat alespoň jeden sloupec."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Událost"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Zobrazí odkaz na stáhnutí dat. První parametr je jméno souboru, druhý jméno "
+"sloupce v tabulce obsahující jméno souboru. Pokud zadáte druhý parametr, "
+"první musí být prázdný."
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Zobrazí data šestnáctkově. Nepovinný parametr určuje po kolika znacích má "
+"být přidána mezera (výchozí hodnota je 2)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Zobrazí náhled obrázku s odkazem na obrázek; parametry šířka a výška "
+"v bodech. Poměr stran obrázku zůstane zachován."
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Zobrazí odkaz na obrázek (například stáhnutí pole blob)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Zobrazí datum nebo čas (TIME, TIMESTAMP, DATETIME nebo unixový timestamp v "
+"numerickém sloupci). První parametr je posun (v hodinách), který bude přidán "
+"k času (výchozí je 0). Druhý parametr je formátovací řetězec. Třetí určuje "
+"jestli chcete zobrazit datum podle místního nastavení nebo UTC čas (použijte "
+"text „local“ nebo „utc“). Podle tohoto nastavení, formát má buďto syntaxi "
+"funkce strftime() pokud použijete „local“ nebo pro gmtime() pokud použijete "
+"„utc“."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"JEN PRO LINUX: Spustí externí program, na jeho standardní vstup pošle obsah "
+"pole a zobrazí výstup programu. Výchozí je program Tidy, který pěkně "
+"zformátuje HTML. Z bezpečnostních důvodů musíte jména povolených programů "
+"zapsat do souboru libraries/transformations/text_plain__external.inc.php. "
+"První parametr je číslo programu, který má být spuštěn a druhý parametr "
+"udává parametry tohoto programu. Třetí parametr určuje, zda mají být ve "
+"výstupu nahrazeny HTML entity (např. pro zobrazení zdrojového kódu HTML) "
+"(výchozí je 1, tedy převádět na entity), čtvrtý (při nastavení na 1) zajistí "
+"přidání parametru NOWRAP k vypisovanému textu, čímž se zachová formátování "
+"(výchozí je 1)."
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"Zachová původní formátování sloupce, tak jak je uložen v databázi, bez "
+"použití htmlspecialchars(). Předpokládá se, že sloupec obsahuje platné HTML."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Zobrazí obrázek a odkaz z pole obsahujícího odkaz na obrázek. První parametr "
+"je prefix URL (například „http://mojedomena.cz/“), druhý a třetí určuje "
+"šířku a výšku obrázku."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Zobrazí odkaz z pole obsahujícího odkaz. První parametr je prefix URL "
+"(například „http://mojedomena.cz/“), druhý text odkazu."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Zobrazí text jako SQL dotaz se zvýrazňováním syntaxe."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Zobrazí jen část textu. První parametr je posun od začátku (výchozí je 0) a "
+"druhý určuje délku textu, který se má zobrazit, pokud není uveden, bude "
+"zobrazen zbytek textu. Třetí parametr určuje, jaký text má být přidán za "
+"zkrácený text (výchozí je ...)."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8295,6 +8298,9 @@ msgstr "Jméno pohledu"
 #: view_operations.php:93
 msgid "Rename view to"
 msgstr "Přejmenovat pohled na"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Viz image/jpeg: inline"
 
 #~ msgid "zipped"
 #~ msgstr "„zazipováno“"
