--- a/po/de.po
+++ b/po/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-05-11 15:22+0200\n"
 "Last-Translator:  <osw@ldism.de>\n"
 "Language-Team: german <de@li.org>\n"
@@ -1823,7 +1823,7 @@ msgstr ","
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d. %B %Y um %H:%M"
 
@@ -3853,140 +3853,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Anzahl der Prozesse, die nicht schlafen."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Zeigt einen Link an, um die binären Daten eines Feldes downloaden zu können. "
-"Die erste Option benennt den Dateinamen. Die zweite Option kann einen "
-"Spaltennamen der Tabelle benennen, aus dem der Dateiname geholt werden soll. "
-"Sollte die zweite Option gesetzt sein ist es notwendig, die erste Option auf "
-"einen Leerstring zu setzen ('')"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Daten in hexadezimaler Schreibweise darstellen. Der optionale Parameter legt "
-"fest, nach wie vielen Halbbyte ein Leerzeichen eingefügt werden soll "
-"(Standardwert ist 2)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Ein klickbares Vorschaubild anzeigen. Optionen: Breite, Höhe in Pixeln "
-"(berücksichtigt Seitenverhältnis)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Einen Link zum Bild anzeigen, z. B. zum Download von BLOB-Daten."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Siehe image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Zeigt ein TIME-, TIMESTAMP-, DATETIME- oder numerisches Unixtimestamp-Feld "
-"als formatiertes Datum. Die erste Option ist der Offset (in Stunden), der "
-"zum Timestamp (Vorgabe: 0) hinzugefügt wird. Benutzen Sie die zweite Option, "
-"um einen abweichenden Datum-/Zeit-Format-String vorzugeben. Die dritte "
-"Option bestimmt, ob Sie das lokale oder das UTC Datum/Zeit dafür zeigen "
-"wollen (benutzen Sie \"local\" oder \"utc\"). Dementsprechend hat das "
-"Datumsformat verschiedene Werte - für \"lokal\" siehe die PHP Dokumentation "
-"für die strftime() Funktion und für \"utc\" wird es mittels der gmdate() "
-"Funktion konvertiert."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"Nur für LINUX: Startet ein externes Programm und verwendet die Daten des "
-"Feldes für die Standardeingabe. Stellt innerhalb von phpMyAdmin die "
-"Standardausgabe des externen Programmes dar. Die Voreinstellung wurde für "
-"Tidy optimiert, um HTML code optisch zu formatieren. Aus Sicherheitsgründen "
-"müssen Sie die Datei libraries/transformations/text_plain__external.inc.php "
-"von Hand bearbeiten um weitere Programme hinzuzufügen. Die erste Option ist "
-"die Nummer des dort hinterlegten Programmes und die zweite Option legt die "
-"Parameter für das externe Programm fest. Die dritte Option bestimmt, falls "
-"auf 1 gesetzt, dass die Ausgabe mit htmlspecialchars() formatiert wird "
-"(Standard: 1). Die vierte Option bestimmt, falls auf 1 gesetzt, ob ein "
-"NOWRAP-Parameter der Tabellenzelle hinzugefügt wird um einen automatischen "
-"Umbruch der Standardausgabe zu verhindern (Standard: 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"Behält Ursprungsformatierung des Feldes bei. Kein Escaping oder "
-"Umlautwandlung wird durchgeführt."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Benutzt den Inhalt eines Feldes um ein Bild und einen Link dazu "
-"darzustellen. Die erste Option ist ein Präfix vor dem eigentlichen "
-"Feldinhalt wie \"http://www.domain.com\". Zweite Option ist die Breite des "
-"Bildes, die dritte Option die Höhe des Bildes in Pixeln."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Benutzt den Inhalt eines Feldes um einen Link darzustellen. Die erste Option "
-"ist ein Präfix vor dem eigentlichen Feldinhalt wie \"http://www.domain.com"
-"\". Zweite Option ist der darzustellende Titel des Links"
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Formatiert den Text als SQL mit Syntaxhervorhebung."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Stellt nur einen Teil des Feldinhaltes dar. Die erste Option definiert die "
-"Position des Textes ab dem die Ausgabe startet (Standard: 0), die zweite "
-"Option gibt an wieviel Zeichen ab dort dargestellt werden sollen. Falls "
-"diese Option leer ist, wird der gesamte verbleibende Text dargestellt. Die "
-"dritte Option kann einen Text enthalten, der bei partieller Ausgabe des "
-"Textes angehängt wird, um eine Abschneidung kenntlich zu machen "
-"(Standard: ...)."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4645,7 +4511,7 @@ msgstr "keine"
 msgid "As defined:"
 msgstr "Benutzerdefiniert:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4683,6 +4549,143 @@ msgstr "Sie müssen mindestens ein Feld hinzufügen."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Ereignis"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Zeigt einen Link an, um die binären Daten eines Feldes downloaden zu können. "
+"Die erste Option benennt den Dateinamen. Die zweite Option kann einen "
+"Spaltennamen der Tabelle benennen, aus dem der Dateiname geholt werden soll. "
+"Sollte die zweite Option gesetzt sein ist es notwendig, die erste Option auf "
+"einen Leerstring zu setzen ('')"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Daten in hexadezimaler Schreibweise darstellen. Der optionale Parameter legt "
+"fest, nach wie vielen Halbbyte ein Leerzeichen eingefügt werden soll "
+"(Standardwert ist 2)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Ein klickbares Vorschaubild anzeigen. Optionen: Breite, Höhe in Pixeln "
+"(berücksichtigt Seitenverhältnis)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Einen Link zum Bild anzeigen, z. B. zum Download von BLOB-Daten."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Zeigt ein TIME-, TIMESTAMP-, DATETIME- oder numerisches Unixtimestamp-Feld "
+"als formatiertes Datum. Die erste Option ist der Offset (in Stunden), der "
+"zum Timestamp (Vorgabe: 0) hinzugefügt wird. Benutzen Sie die zweite Option, "
+"um einen abweichenden Datum-/Zeit-Format-String vorzugeben. Die dritte "
+"Option bestimmt, ob Sie das lokale oder das UTC Datum/Zeit dafür zeigen "
+"wollen (benutzen Sie \"local\" oder \"utc\"). Dementsprechend hat das "
+"Datumsformat verschiedene Werte - für \"lokal\" siehe die PHP Dokumentation "
+"für die strftime() Funktion und für \"utc\" wird es mittels der gmdate() "
+"Funktion konvertiert."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"Nur für LINUX: Startet ein externes Programm und verwendet die Daten des "
+"Feldes für die Standardeingabe. Stellt innerhalb von phpMyAdmin die "
+"Standardausgabe des externen Programmes dar. Die Voreinstellung wurde für "
+"Tidy optimiert, um HTML code optisch zu formatieren. Aus Sicherheitsgründen "
+"müssen Sie die Datei libraries/transformations/text_plain__external.inc.php "
+"von Hand bearbeiten um weitere Programme hinzuzufügen. Die erste Option ist "
+"die Nummer des dort hinterlegten Programmes und die zweite Option legt die "
+"Parameter für das externe Programm fest. Die dritte Option bestimmt, falls "
+"auf 1 gesetzt, dass die Ausgabe mit htmlspecialchars() formatiert wird "
+"(Standard: 1). Die vierte Option bestimmt, falls auf 1 gesetzt, ob ein "
+"NOWRAP-Parameter der Tabellenzelle hinzugefügt wird um einen automatischen "
+"Umbruch der Standardausgabe zu verhindern (Standard: 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"Behält Ursprungsformatierung des Feldes bei. Kein Escaping oder "
+"Umlautwandlung wird durchgeführt."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Benutzt den Inhalt eines Feldes um ein Bild und einen Link dazu "
+"darzustellen. Die erste Option ist ein Präfix vor dem eigentlichen "
+"Feldinhalt wie \"http://www.domain.com\". Zweite Option ist die Breite des "
+"Bildes, die dritte Option die Höhe des Bildes in Pixeln."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Benutzt den Inhalt eines Feldes um einen Link darzustellen. Die erste Option "
+"ist ein Präfix vor dem eigentlichen Feldinhalt wie \"http://www.domain.com"
+"\". Zweite Option ist der darzustellende Titel des Links"
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Formatiert den Text als SQL mit Syntaxhervorhebung."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Stellt nur einen Teil des Feldinhaltes dar. Die erste Option definiert die "
+"Position des Textes ab dem die Ausgabe startet (Standard: 0), die zweite "
+"Option gibt an wieviel Zeichen ab dort dargestellt werden sollen. Falls "
+"diese Option leer ist, wird der gesamte verbleibende Text dargestellt. Die "
+"dritte Option kann einen Text enthalten, der bei partieller Ausgabe des "
+"Textes angehängt wird, um eine Abschneidung kenntlich zu machen "
+"(Standard: ...)."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8368,6 +8371,9 @@ msgstr "VIEW Name"
 #: view_operations.php:93
 msgid "Rename view to"
 msgstr "View umbenennen in"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Siehe image/jpeg: inline"
 
 #~ msgid "zipped"
 #~ msgstr "Zip-komprimiert"
