--- a/po/et.po
+++ b/po/et.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-03-12 09:14+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: estonian <et@li.org>\n"
@@ -1865,7 +1865,7 @@ msgstr "."
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d.%m.%Y kell %H:%M:%S"
 
@@ -3826,129 +3826,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Lõimude arv mis mis hetkel ei maga."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Näita linki millega laadida alla välja binaarne info. Esimene seade on "
-"binaarse faili nimi. Teine seade on võimalik väljanimi tabelis mis sisaldab "
-"failinime. Kui te määrate teise seade siis peab esimene seade olema tühi "
-"tekst"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Kuvab andmed kuueteistkümnend süsteemis. Valikuline Esimene parameeter seab "
-"kui tihti ruumi tehakse (vaikimisi 2 näkkamist)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Kuvab lingitud väikepildi; seaded: laius,kõrgus pikslites (hoiab alles "
-"originaalpildi laiuse-kõrguse suhte)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Kuvab lingi sellele pildile (otsene binaarne allalaadimine, jne.)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Vaata image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Näitab TIME, TIMESTAMP, DATETIME või numbrilist unix´i ajatempli välja "
-"formaaditud kuupäevana. Esimene valik on ajanihe (tundides) mis lisatakse "
-"ajatemplile (Vaikimisi: 0). Kasuta teist valikut et täpsustada kuupäeva "
-"formaat. Kolmas valik annab valida kas kuupäev kasutab kohalikku aega või "
-"UTC oma (kasuta \"local\" (kohalik) või \"utc\" stringe). Sellest "
-"tulenevalt, kuupäeva formaadil on teine väärtus - \"local\" väärtuse "
-"täpsustamiseks vaata dokumentatsiooni PHP strftime() funktsiooni kasutamise "
-"kohta ja  kasutades \"utc\" vaata gmdate() funtsiooni kasutamist."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"AINULT LINUXILE: Käivitab välise aplikatsiooni ja annab talle standard "
-"sisendisse ette välja sisu. Tagastab aplikatsiooni standard väljundi. "
-"Vaikimisi on selleks Tidy, et kuvada ilusti formaaditud HTML koodi. "
-"Turvariskide maandamiseks peate te käsitsi muutma faili libraries/"
-"transformations/text_plain__external.inc.php ja lisama sinna programmid mida "
-"te lasete käivitada. Esimene seade on siis kasutatava programmi number, "
-"teine seade on programmi parameetrid. Kui kolmas seade on 1 siis töödeldakse "
-"väljund funktsiooniga htmlspecialchars() (vaikimisi 1). Kui neljas seade on  "
-"1 pannakse NOWRAP sisu lahtrile nii, et kogu väljund kuvatakse ilma formaati "
-"muutmata(vaikimisi 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr "Hoiab alles originaalset välja formaati. Ei varjestata."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Kuvab pildi ja lingi, väli sisaldab failinime; esimene seade on eelnev tekst "
-"nagu \"http://domain.com/\", teine seade on laius pikslites, kolmas on "
-"kõrgus."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Kuvab lingi, väli sisaldab failinime; esimene seade on eelnev tekst näiteks "
-"\"http://domain.com/\", teine seade on nimi lingile."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Vormib SQL päringu tekstiks esile tõstetuna."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Näitab ainult osa tekstist. Esimene seade on määrang kust positsioonilt teie "
-"teksti kuva hakkab.(vaikimisi 0). Teine seade on kuipalju teksti "
-"tagastatakse, kui see tühjaks jätta, tagastatakse kogu allesjäänud tekst. "
-"Kolmas seade defineerib mis tekst lisatakse väljundi lõppu kui saadud tekst "
-"tagastatakse. (vaikimisi: ...) ."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4596,7 +4473,7 @@ msgstr "Pole"
 msgid "As defined:"
 msgstr ""
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4634,6 +4511,132 @@ msgstr "Peate lisama vähemalt ühe välja."
 #, fuzzy
 msgid "Event"
 msgstr "Saadetud"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Näita linki millega laadida alla välja binaarne info. Esimene seade on "
+"binaarse faili nimi. Teine seade on võimalik väljanimi tabelis mis sisaldab "
+"failinime. Kui te määrate teise seade siis peab esimene seade olema tühi "
+"tekst"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Kuvab andmed kuueteistkümnend süsteemis. Valikuline Esimene parameeter seab "
+"kui tihti ruumi tehakse (vaikimisi 2 näkkamist)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Kuvab lingitud väikepildi; seaded: laius,kõrgus pikslites (hoiab alles "
+"originaalpildi laiuse-kõrguse suhte)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Kuvab lingi sellele pildile (otsene binaarne allalaadimine, jne.)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Näitab TIME, TIMESTAMP, DATETIME või numbrilist unix´i ajatempli välja "
+"formaaditud kuupäevana. Esimene valik on ajanihe (tundides) mis lisatakse "
+"ajatemplile (Vaikimisi: 0). Kasuta teist valikut et täpsustada kuupäeva "
+"formaat. Kolmas valik annab valida kas kuupäev kasutab kohalikku aega või "
+"UTC oma (kasuta \"local\" (kohalik) või \"utc\" stringe). Sellest "
+"tulenevalt, kuupäeva formaadil on teine väärtus - \"local\" väärtuse "
+"täpsustamiseks vaata dokumentatsiooni PHP strftime() funktsiooni kasutamise "
+"kohta ja  kasutades \"utc\" vaata gmdate() funtsiooni kasutamist."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"AINULT LINUXILE: Käivitab välise aplikatsiooni ja annab talle standard "
+"sisendisse ette välja sisu. Tagastab aplikatsiooni standard väljundi. "
+"Vaikimisi on selleks Tidy, et kuvada ilusti formaaditud HTML koodi. "
+"Turvariskide maandamiseks peate te käsitsi muutma faili libraries/"
+"transformations/text_plain__external.inc.php ja lisama sinna programmid mida "
+"te lasete käivitada. Esimene seade on siis kasutatava programmi number, "
+"teine seade on programmi parameetrid. Kui kolmas seade on 1 siis töödeldakse "
+"väljund funktsiooniga htmlspecialchars() (vaikimisi 1). Kui neljas seade on  "
+"1 pannakse NOWRAP sisu lahtrile nii, et kogu väljund kuvatakse ilma formaati "
+"muutmata(vaikimisi 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr "Hoiab alles originaalset välja formaati. Ei varjestata."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Kuvab pildi ja lingi, väli sisaldab failinime; esimene seade on eelnev tekst "
+"nagu \"http://domain.com/\", teine seade on laius pikslites, kolmas on "
+"kõrgus."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Kuvab lingi, väli sisaldab failinime; esimene seade on eelnev tekst näiteks "
+"\"http://domain.com/\", teine seade on nimi lingile."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Vormib SQL päringu tekstiks esile tõstetuna."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Näitab ainult osa tekstist. Esimene seade on määrang kust positsioonilt teie "
+"teksti kuva hakkab.(vaikimisi 0). Teine seade on kuipalju teksti "
+"tagastatakse, kui see tühjaks jätta, tagastatakse kogu allesjäänud tekst. "
+"Kolmas seade defineerib mis tekst lisatakse väljundi lõppu kui saadud tekst "
+"tagastatakse. (vaikimisi: ...) ."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8210,6 +8213,9 @@ msgstr ""
 #, fuzzy
 msgid "Rename view to"
 msgstr "Nimeta tabel ümber"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Vaata image/jpeg: inline"
 
 #, fuzzy
 #~| msgid "\"zipped\""
