--- a/po/eu.po
+++ b/po/eu.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-03-31 10:40+0200\n"
 "Last-Translator:  <hey_neken@mundurat.net>\n"
 "Language-Team: basque <eu@li.org>\n"
@@ -1851,7 +1851,7 @@ msgstr "."
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%Y-%m-%d, %H:%M:%S"
 
@@ -3691,118 +3691,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr ""
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Miniatura klikagarri bat erakusten du; aukerak: luzera,altuera pixeletan "
-"(jatorrizko erlazioa mantentzen du)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr ""
-"Irudi honi zuzendutako esketa bat erakusten du(blob deskarga zuzena, i.e.)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Ikusi image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"LINUX SOILIK: Kanpoko aplikazio bat abiaratzen du eta datu-eremua sarrera "
-"estandarraren bidez osatzen du. Aplikazioaren irteera estandarra itzultzen "
-"du. Lehenetsitakoa Tidy da, HTML kodea txukun pantailaratzeko. Segurtasun "
-"arrazoiengatik, libraries/transformations/text_plain__external.inc.php "
-"fitxategia eskuz editatu beharko duzu eta hor zehaztu zein tresna "
-"exekutatzea baimentzen duzun. Lehenengo aukera erabili nahi duzun "
-"programaren zenbakia da eta bigarren aukera programarentzako parametroak "
-"dira . Hirugarren parametroa, 1 izanez gero irteera bihurtuko du  "
-"htmlspecialchars() funtzioa erabiliz (Lehenetsia: 1). Laugarren parametroa, "
-"1 izanez gero NOWRAP bat ezarriko dio edukin-gelaxkari, beraz irteera osoa "
-"berformateatu barik erakutsiko da(Lehenetsi 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr "Eremuaren jatorrizko formateoa mantentzen du. Aldaketarik egin gabe."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Irudi eta esteka bana erakusten ditu, eremuak fitxategiaren izena dauka; "
-"lehenengo aukera \"http://domain.com/\" moduko aurrizki bat da, bigarren "
-"aukera pixeletan neurtutako zabalera da, hirugarrena altuera da."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Esteka bat erakusten du, eremuak fitxategiaren izena dauka; lehenengo aukera "
-"\"http://domain.com/\" moduko aurrizki bat da , bigarren aukera estekaren "
-"izenburua da."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr ""
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Soilik katearen zati bat erakutsi. Lehenengo aukerak zehazten du non hasten "
-"den zure testuaren desplazamendua (lehenetsi 0). Bigarren aukerak itzultzeko "
-"karaktere kopurua erakusten du. Hutsik badago, gainerako testu guztia "
-"bueltatuko du. Hirugarren aukerak zehazten du zeintzuk karaktere txertatuko "
-"diren irteerara azpikate bat itzultzen denean (Lehenetsia: ...) ."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4458,7 +4346,7 @@ msgstr "Batez"
 msgid "As defined:"
 msgstr "Honela definitua:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4496,6 +4384,121 @@ msgstr ""
 #, fuzzy
 msgid "Event"
 msgstr "Bidalita"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Miniatura klikagarri bat erakusten du; aukerak: luzera,altuera pixeletan "
+"(jatorrizko erlazioa mantentzen du)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr ""
+"Irudi honi zuzendutako esketa bat erakusten du(blob deskarga zuzena, i.e.)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"LINUX SOILIK: Kanpoko aplikazio bat abiaratzen du eta datu-eremua sarrera "
+"estandarraren bidez osatzen du. Aplikazioaren irteera estandarra itzultzen "
+"du. Lehenetsitakoa Tidy da, HTML kodea txukun pantailaratzeko. Segurtasun "
+"arrazoiengatik, libraries/transformations/text_plain__external.inc.php "
+"fitxategia eskuz editatu beharko duzu eta hor zehaztu zein tresna "
+"exekutatzea baimentzen duzun. Lehenengo aukera erabili nahi duzun "
+"programaren zenbakia da eta bigarren aukera programarentzako parametroak "
+"dira . Hirugarren parametroa, 1 izanez gero irteera bihurtuko du  "
+"htmlspecialchars() funtzioa erabiliz (Lehenetsia: 1). Laugarren parametroa, "
+"1 izanez gero NOWRAP bat ezarriko dio edukin-gelaxkari, beraz irteera osoa "
+"berformateatu barik erakutsiko da(Lehenetsi 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr "Eremuaren jatorrizko formateoa mantentzen du. Aldaketarik egin gabe."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Irudi eta esteka bana erakusten ditu, eremuak fitxategiaren izena dauka; "
+"lehenengo aukera \"http://domain.com/\" moduko aurrizki bat da, bigarren "
+"aukera pixeletan neurtutako zabalera da, hirugarrena altuera da."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Esteka bat erakusten du, eremuak fitxategiaren izena dauka; lehenengo aukera "
+"\"http://domain.com/\" moduko aurrizki bat da , bigarren aukera estekaren "
+"izenburua da."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr ""
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Soilik katearen zati bat erakutsi. Lehenengo aukerak zehazten du non hasten "
+"den zure testuaren desplazamendua (lehenetsi 0). Bigarren aukerak itzultzeko "
+"karaktere kopurua erakusten du. Hutsik badago, gainerako testu guztia "
+"bueltatuko du. Hirugarren aukerak zehazten du zeintzuk karaktere txertatuko "
+"diren irteerara azpikate bat itzultzen denean (Lehenetsia: ...) ."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8051,6 +8054,9 @@ msgstr ""
 #, fuzzy
 msgid "Rename view to"
 msgstr "Taula berrizendatu izen honetara: "
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Ikusi image/jpeg: inline"
 
 #, fuzzy
 #~| msgid "\"zipped\""
