--- a/po/lt.po
+++ b/po/lt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-04-16 19:52+0200\n"
 "Last-Translator: Rytis <rytis.s@gmail.com>\n"
 "Language-Team: lithuanian <lt@li.org>\n"
@@ -1854,7 +1854,7 @@ msgstr ","
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%Y m. %B %d d. %H:%M"
 
@@ -3721,121 +3721,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr ""
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Įšvesti nuorodą dvejetainių lauko duomenų atsisiuntimui. Pirmas parametras - "
-"dvejetainių lauko duomenų failo pavadinimas. Antras parametras - galimas "
-"lentelės eilutės lauko turinčio failą pavadinimas. Jeigu pateiksite antrą "
-"parametrą, ištrinkite pirmojo parametro reikšmę."
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Parodo aktyvų mažinį; nustatymai: plotis,aukštis pikseliais (išsaugo "
-"originalų santykį)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr ""
-"Išvedama nuoroda į šį paveikslėlį (tiesioginis blob atsisiuntimas ir pan.)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Žr. image/jpeg: vidų"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"LINUX VARTOTOJAMS: Paleidžiama išorinė aplikacija ir duomenys imami iš "
-"standartinio įvedimo. Išvedama iš aplikacijos gauta informacija. Nutylint: "
-"bus Tidy korektiškam HTML kodo išvedimui. Saugumo sumetimais Jūs turite "
-"paredaguoti libraries/transformations/text_plain__external.inc.php failą ir "
-"įvesti tas aplikacijas, kurias naudosite. Pirmas parametras yra leidžiamų "
-"aplikacijų kiekis, kurias naudosite. Antras parametras yra specifiniai "
-"aplikacijų raktai. Jeigu trečias parametras lygus 1, tai išvedama "
-"informacija bus apdorota su htmlspecialchars() (nutylint: reikšmė lygi 1). "
-"Jeigu ketvirtas parametras lygus 1, tai išvedimo lentelės celė turės "
-"atributą NOWRAP, tam kad išvedama būtų atvaizduota be perkėlimų į kitas "
-"eilutes (nutylint: reikšmė lygi 1)."
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr "Išsaugo originalų lauko apipavidalinimą. Nevykdomas išvengimas."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Gražinamas paveikslėlis ir nuoroda į įvedimo lauke įrašytą failo pavadinimą; "
-"argumentai: prefiksas (pvz \"http://domain.com/\"), plotis (pikseliais), "
-"aukštis (pikseliais)."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Gražinama nuoroda į įvedimo lauke įrašytą failo pavadinimą; argumentai: "
-"prefiksas (pvz \"http://domain.com/\"), nuorodos pavadinimas."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr ""
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Rodoma tik dalis teksto. Pirmas parametras nurodo išvedamo teksto pradžią "
-"(nutylint: 0). Antrasis parametras nurodo išvedamo teksto kiekį. Jeigu "
-"antras parametras nenurodytas tai bus išvestas visas tekstas. Trečiasis "
-"parametras nurodo kurios raidės bus prijungtos prie išvedimo teksto "
-"(nutylint: ...)."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4483,7 +4368,7 @@ msgstr "Nėra"
 msgid "As defined:"
 msgstr "Kaip nurodyta:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4519,6 +4404,124 @@ msgstr ""
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Įvykis"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Įšvesti nuorodą dvejetainių lauko duomenų atsisiuntimui. Pirmas parametras - "
+"dvejetainių lauko duomenų failo pavadinimas. Antras parametras - galimas "
+"lentelės eilutės lauko turinčio failą pavadinimas. Jeigu pateiksite antrą "
+"parametrą, ištrinkite pirmojo parametro reikšmę."
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Parodo aktyvų mažinį; nustatymai: plotis,aukštis pikseliais (išsaugo "
+"originalų santykį)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr ""
+"Išvedama nuoroda į šį paveikslėlį (tiesioginis blob atsisiuntimas ir pan.)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"LINUX VARTOTOJAMS: Paleidžiama išorinė aplikacija ir duomenys imami iš "
+"standartinio įvedimo. Išvedama iš aplikacijos gauta informacija. Nutylint: "
+"bus Tidy korektiškam HTML kodo išvedimui. Saugumo sumetimais Jūs turite "
+"paredaguoti libraries/transformations/text_plain__external.inc.php failą ir "
+"įvesti tas aplikacijas, kurias naudosite. Pirmas parametras yra leidžiamų "
+"aplikacijų kiekis, kurias naudosite. Antras parametras yra specifiniai "
+"aplikacijų raktai. Jeigu trečias parametras lygus 1, tai išvedama "
+"informacija bus apdorota su htmlspecialchars() (nutylint: reikšmė lygi 1). "
+"Jeigu ketvirtas parametras lygus 1, tai išvedimo lentelės celė turės "
+"atributą NOWRAP, tam kad išvedama būtų atvaizduota be perkėlimų į kitas "
+"eilutes (nutylint: reikšmė lygi 1)."
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr "Išsaugo originalų lauko apipavidalinimą. Nevykdomas išvengimas."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Gražinamas paveikslėlis ir nuoroda į įvedimo lauke įrašytą failo pavadinimą; "
+"argumentai: prefiksas (pvz \"http://domain.com/\"), plotis (pikseliais), "
+"aukštis (pikseliais)."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Gražinama nuoroda į įvedimo lauke įrašytą failo pavadinimą; argumentai: "
+"prefiksas (pvz \"http://domain.com/\"), nuorodos pavadinimas."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr ""
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Rodoma tik dalis teksto. Pirmas parametras nurodo išvedamo teksto pradžią "
+"(nutylint: 0). Antrasis parametras nurodo išvedamo teksto kiekį. Jeigu "
+"antras parametras nenurodytas tai bus išvestas visas tekstas. Trečiasis "
+"parametras nurodo kurios raidės bus prijungtos prie išvedimo teksto "
+"(nutylint: ...)."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8092,6 +8095,9 @@ msgstr ""
 #, fuzzy
 msgid "Rename view to"
 msgstr "Pervadinti lentelę į"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Žr. image/jpeg: vidų"
 
 #, fuzzy
 #~| msgid "\"zipped\""
