--- a/po/nb.po
+++ b/po/nb.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-05-18 10:59+0200\n"
 "Last-Translator:  <sven.erik.andersen@gmail.com>\n"
 "Language-Team: norwegian <no@li.org>\n"
@@ -1803,7 +1803,7 @@ msgstr ","
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d. %B, %Y %H:%M %p"
 
@@ -3795,129 +3795,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Antall tråder som ikke sover."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Vis en link for å kunne laste ned de binære dataene til et felt. Den første "
-"opsjonen er filnavnet til den binære fila. Den andre opsjonen er et "
-"potensielt feltnavn i en tabell som inneholder filnavnet. Hvis du velger den "
-"andre opsjonen så må den første være satt til en tom strengverdi"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Vis dataene i heksadesimal. Den valgfrie første parameteren tilkjennegir "
-"hvor ofte mellomrom vil bli lagt til (standard hvert andre tegn)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Viser et klikkbart tommelfingerbilde; valg: bredde, høyde i piksler (bevarer "
-"originale forhold)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Viser en link til dette bildet (m.a.o. direkte blob-nedlasting)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Se image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Vi en TIME, TIMESTAMP, DATETIME eller et numerisk Unix tidsmerke som en "
-"formatert dato. Den første innstillingen er differansen (i timer) som vil "
-"bli lagt til tidsmerket (Standard: 0). Bruk den andre innstillingen til å "
-"spesifiser en alternativ datoformatstreng. Den tredje innstillingen avgjør "
-"om du ønsker visning som en lokal dato eller som UTC (bruk \"local\" eller "
-"\"utc\" strenger). Avhengig av dette, vil datoformatstrengen ha forskjellig "
-"verdi - for \"local\" se dokumentasjonen for PHPs strftime() funksjon og for "
-"\"utc\" se gmdate() funksjonen."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"BARE LINUX: Starter et eksternt program og gir den feltdataene via standard "
-"input. Returnerer standart output fra programmet. Standard er Tidy, for å "
-"skrive ut pen HTML kode. Av sikkerhetsgrunner så må du redigere fila "
-"libraries/transformations/text_plain__external.inc.php og skrive inn de "
-"verktøyene du tillater å kjøres. Den første verdien er antall programmer du "
-"ønsker å bruke og den andre verdien er parameterene for programmet. Den "
-"tredje verdien, hvis den er satt til 1 vil konvertere utskriften med "
-"htmlspecialchars() (Standard er 1). En fjerde verdi vil, viss satt til 1 "
-"sette en NOWRAP i innholdscellen slik at hele resultatet blir vist uten "
-"reformatering (Standard er 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr "Bevarer original formatering av feltet. Ingen 'escaping' blir utført."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Viser et bilde og en link, feltet inneholder filnavnet; første verdi er et "
-"prefiks slik som \"http://domain.com/\", andre verdien er bredden i piksler, "
-"tredje er høyden."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Viser en link, feltet inneholder filnavnet, ; første verdi er et prefiks "
-"slik som \"http://domain.com/\", andre verdien er en tittel for linken."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Formaterer tekst som en SQL spørring med syntaksutheving."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Viser bare en delstreng. Første verdien er antall tegn fra starten hvor din "
-"tekst begynner (Standard: 0). Andre verdien er hvor mange tegn som skal "
-"returneres. Hvis den er tom så returneres resten av teksten. Den tredje "
-"verdien definerer hvilke tegn som vil bli lagt til resultatet når en "
-"delstreng blir returnert (Standard: ...)."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4567,7 +4444,7 @@ msgstr "Ingen"
 msgid "As defined:"
 msgstr "Som definert:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4604,6 +4481,132 @@ msgstr "Du må sette inn minst ett felt."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Hendelse"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Vis en link for å kunne laste ned de binære dataene til et felt. Den første "
+"opsjonen er filnavnet til den binære fila. Den andre opsjonen er et "
+"potensielt feltnavn i en tabell som inneholder filnavnet. Hvis du velger den "
+"andre opsjonen så må den første være satt til en tom strengverdi"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Vis dataene i heksadesimal. Den valgfrie første parameteren tilkjennegir "
+"hvor ofte mellomrom vil bli lagt til (standard hvert andre tegn)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Viser et klikkbart tommelfingerbilde; valg: bredde, høyde i piksler (bevarer "
+"originale forhold)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Viser en link til dette bildet (m.a.o. direkte blob-nedlasting)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Vi en TIME, TIMESTAMP, DATETIME eller et numerisk Unix tidsmerke som en "
+"formatert dato. Den første innstillingen er differansen (i timer) som vil "
+"bli lagt til tidsmerket (Standard: 0). Bruk den andre innstillingen til å "
+"spesifiser en alternativ datoformatstreng. Den tredje innstillingen avgjør "
+"om du ønsker visning som en lokal dato eller som UTC (bruk \"local\" eller "
+"\"utc\" strenger). Avhengig av dette, vil datoformatstrengen ha forskjellig "
+"verdi - for \"local\" se dokumentasjonen for PHPs strftime() funksjon og for "
+"\"utc\" se gmdate() funksjonen."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"BARE LINUX: Starter et eksternt program og gir den feltdataene via standard "
+"input. Returnerer standart output fra programmet. Standard er Tidy, for å "
+"skrive ut pen HTML kode. Av sikkerhetsgrunner så må du redigere fila "
+"libraries/transformations/text_plain__external.inc.php og skrive inn de "
+"verktøyene du tillater å kjøres. Den første verdien er antall programmer du "
+"ønsker å bruke og den andre verdien er parameterene for programmet. Den "
+"tredje verdien, hvis den er satt til 1 vil konvertere utskriften med "
+"htmlspecialchars() (Standard er 1). En fjerde verdi vil, viss satt til 1 "
+"sette en NOWRAP i innholdscellen slik at hele resultatet blir vist uten "
+"reformatering (Standard er 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr "Bevarer original formatering av feltet. Ingen 'escaping' blir utført."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Viser et bilde og en link, feltet inneholder filnavnet; første verdi er et "
+"prefiks slik som \"http://domain.com/\", andre verdien er bredden i piksler, "
+"tredje er høyden."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Viser en link, feltet inneholder filnavnet, ; første verdi er et prefiks "
+"slik som \"http://domain.com/\", andre verdien er en tittel for linken."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Formaterer tekst som en SQL spørring med syntaksutheving."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Viser bare en delstreng. Første verdien er antall tegn fra starten hvor din "
+"tekst begynner (Standard: 0). Andre verdien er hvor mange tegn som skal "
+"returneres. Hvis den er tom så returneres resten av teksten. Den tredje "
+"verdien definerer hvilke tegn som vil bli lagt til resultatet når en "
+"delstreng blir returnert (Standard: ...)."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8307,6 +8310,9 @@ msgstr "VIEW navn"
 #: view_operations.php:93
 msgid "Rename view to"
 msgstr "Endre tabellens navn"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Se image/jpeg: inline"
 
 #~ msgid "zipped"
 #~ msgstr "Komprimert (zip)"
