--- a/po/pl.po
+++ b/po/pl.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-03-12 09:17+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: polish <pl@li.org>\n"
@@ -1879,7 +1879,7 @@ msgstr ","
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d %B %Y, %H:%M"
 
@@ -3880,130 +3880,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Liczba nieuśpionych wątków."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Wyświetla link do ściągnięcia binarnych danych z tego pola. Pierwsza opcja "
-"to nazwa pliku binarnego. Drugą opcją jest możliwa nazwa pola zawierającego "
-"nazwę pliku. Jeżeli dana jest druga opcja, pierwsza musi być pustym napisem"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Wyświetla szesnastkową reprezentację danych. Opcjonalny pierwszy parametr "
-"określa jak często dodawane będą spacje (domyślnie: co 2 półbajty)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Wyświetla klikalną miniaturkę; opcje: szerokość,wysokość w pikselach "
-"(oryginalne proporcje zostaną zachowane)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Wyświetla link do tego obrazu (bezpośrednie ściągnięcie bloba)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Zobacz image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Wyświetla pola typu TIME, TIMESTAMP, DATETIME lub numeryczne uniksowe "
-"znaczniki czasu jako sformatowane daty. Pierwsza opcja to przesunięcie (w "
-"godzinach) które zostanie dodane do znacznika czasu (domyślnie: 0). Drugą "
-"opcją można określić inny napis formatujący datę/czas. Trzecia opcja określa "
-"czy daty mają być lokalne (\"local\") czy w UTC (\"utc\"). Od tego wyboru "
-"zależy format daty: w przypadku \"local\" jest taki jak dla funkcji PHP "
-"strftime(), w przypadku \"utc\" — gmdate()."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"TYLKO LINUX: Uruchamia zewnętrzną aplikację i przekazuje dane pól na "
-"standardowe wejście. Zwraca standardowe wyjście tej aplikacji. Domyślnie "
-"jest to Tidy, który porządkuje kod HTML. Ze względu na bezpieczeństwo, "
-"należy ręcznie zmodyfikować plik libraries/transformations/"
-"text_plain__external.inc.php i dodać narzędzie, na którego uruchamianie "
-"pozwalasz. Pierwszą opcją jest liczba programów, których chcesz użyć, a "
-"drugą są parametry programu. Jeżeli trzeci parametr jest ustawiony na 1 "
-"(jest to domyślna wartość), zostanie dokonana konwersja wyjścia poprzez "
-"użycie htmlspecialchars(). Jeżeli czwarty parametr został ustawiony na 1 "
-"(jest to domyślna wartość), zawartość komórki nie będzie zawijana, tak że "
-"całe wyjście zostanie pokazane bez zmian formatu."
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"Zachowuje oryginalne formatowanie pola. Neutralizowanie znaków "
-"niespecjalnych nie jest dokonywane."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Wyświetla obrazek i link, pole zawiera nazwę pliku; pierwszą opcję jest "
-"prefiks, taki jak \"http://domena.com/\", drugą opcją jest szerokość w "
-"pikselach, trzecią opcją jest wysokość."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Wyświetla link, pole zawiera nazwę pliku; pierwsza opcja to prefiks, taki "
-"jak \"http://domena.com/\", druga opcja to tytuł linku."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Formatuj tekst traktując jako zapytanie SQL z podświetlaniem składni."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Pokazuje jedynie część napisu. Pierwsza opcja to offset, od którego ma "
-"zacząć się wyświetlanie tekstu (domyślnie 0). Druga opcja to ilość "
-"zwracanego tekstu. Jeżeli jest pusta, zwracany jest cały pozostały tekst. "
-"Trzecia opcja określa jakie znaki zostaną dodane do wyjścia, jeżeli zwracany "
-"jest część napisu (domyślnie: …) ."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4657,7 +4533,7 @@ msgstr "Brak"
 msgid "As defined:"
 msgstr "Zdefiniowana następująco:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4692,6 +4568,133 @@ msgstr "Należy dodać przynajmniej jedno pole."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Zdarzenie"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Wyświetla link do ściągnięcia binarnych danych z tego pola. Pierwsza opcja "
+"to nazwa pliku binarnego. Drugą opcją jest możliwa nazwa pola zawierającego "
+"nazwę pliku. Jeżeli dana jest druga opcja, pierwsza musi być pustym napisem"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Wyświetla szesnastkową reprezentację danych. Opcjonalny pierwszy parametr "
+"określa jak często dodawane będą spacje (domyślnie: co 2 półbajty)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Wyświetla klikalną miniaturkę; opcje: szerokość,wysokość w pikselach "
+"(oryginalne proporcje zostaną zachowane)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Wyświetla link do tego obrazu (bezpośrednie ściągnięcie bloba)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Wyświetla pola typu TIME, TIMESTAMP, DATETIME lub numeryczne uniksowe "
+"znaczniki czasu jako sformatowane daty. Pierwsza opcja to przesunięcie (w "
+"godzinach) które zostanie dodane do znacznika czasu (domyślnie: 0). Drugą "
+"opcją można określić inny napis formatujący datę/czas. Trzecia opcja określa "
+"czy daty mają być lokalne (\"local\") czy w UTC (\"utc\"). Od tego wyboru "
+"zależy format daty: w przypadku \"local\" jest taki jak dla funkcji PHP "
+"strftime(), w przypadku \"utc\" — gmdate()."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"TYLKO LINUX: Uruchamia zewnętrzną aplikację i przekazuje dane pól na "
+"standardowe wejście. Zwraca standardowe wyjście tej aplikacji. Domyślnie "
+"jest to Tidy, który porządkuje kod HTML. Ze względu na bezpieczeństwo, "
+"należy ręcznie zmodyfikować plik libraries/transformations/"
+"text_plain__external.inc.php i dodać narzędzie, na którego uruchamianie "
+"pozwalasz. Pierwszą opcją jest liczba programów, których chcesz użyć, a "
+"drugą są parametry programu. Jeżeli trzeci parametr jest ustawiony na 1 "
+"(jest to domyślna wartość), zostanie dokonana konwersja wyjścia poprzez "
+"użycie htmlspecialchars(). Jeżeli czwarty parametr został ustawiony na 1 "
+"(jest to domyślna wartość), zawartość komórki nie będzie zawijana, tak że "
+"całe wyjście zostanie pokazane bez zmian formatu."
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"Zachowuje oryginalne formatowanie pola. Neutralizowanie znaków "
+"niespecjalnych nie jest dokonywane."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Wyświetla obrazek i link, pole zawiera nazwę pliku; pierwszą opcję jest "
+"prefiks, taki jak \"http://domena.com/\", drugą opcją jest szerokość w "
+"pikselach, trzecią opcją jest wysokość."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Wyświetla link, pole zawiera nazwę pliku; pierwsza opcja to prefiks, taki "
+"jak \"http://domena.com/\", druga opcja to tytuł linku."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Formatuj tekst traktując jako zapytanie SQL z podświetlaniem składni."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Pokazuje jedynie część napisu. Pierwsza opcja to offset, od którego ma "
+"zacząć się wyświetlanie tekstu (domyślnie 0). Druga opcja to ilość "
+"zwracanego tekstu. Jeżeli jest pusta, zwracany jest cały pozostały tekst. "
+"Trzecia opcja określa jakie znaki zostaną dodane do wyjścia, jeżeli zwracany "
+"jest część napisu (domyślnie: …) ."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8367,6 +8370,9 @@ msgstr "Nazwa perspektywy"
 #, fuzzy
 msgid "Rename view to"
 msgstr "Zmień nazwę tabeli na"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Zobacz image/jpeg: inline"
 
 #, fuzzy
 #~| msgid "\"zipped\""
