--- a/po/ro.po
+++ b/po/ro.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-05-16 01:40+0200\n"
 "Last-Translator:  <ssuceveanu@yahoo.com>\n"
 "Language-Team: romanian <ro@li.org>\n"
@@ -1879,7 +1879,7 @@ msgstr "."
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d %B %Y la %H:%M"
 
@@ -3873,131 +3873,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "The number of threads that are not sleeping."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Afișează un link pentru descarcarea datelor binare a unui camp. Prima "
-"optiune este denumirea fisierului binar. A doua optiune este o denumire "
-"posibila pentru un rand de tabel care contine denumirea de fisier. Daca "
-"setati și o a doua optiune, trebuie sa aveti prima optiune setata ca și "
-"empty string"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Afișează o imagine mica clicabila ; optiuni: latime, inaltime in pixeli "
-"(metine dimensiunile originale)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Afișează un link la imagine (direct blob download, i.e.)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Vezi imagine/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"NUMAI LINUX: Lanseaza o aplicatie externa și trimite datele prin input "
-"standard. Returneaza standard output a aplicatiei. Default este Tidy, pentru "
-"listarea codului HTML. Din motive de securitate, va trebui sa editati manual "
-"fisierul libraries/transformations/text_plain__external.inc.php și să "
-"inserați uneltele permise să ruleze. Prima opțiune este apoi numărul de "
-"programe care vor fi utilizate și a doua opțiune sînt  parametri pentru "
-"program. Al treilea parametru, dacă este stabilit la 1 va transforma ieșirea "
-"folosind htmlspecialchars() (implicit este 1). Un al patrulea parametru, "
-"dacă este stabilit la 1, va aplica NOWRAP la conținut, astfel încît întregul "
-"output va fi afișat fără reformatare (implicit 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr "Menține formatarea originală a cîmpului."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Afișează o imagine și un link, campul contine denumirea fisierului; prima "
-"optiune este un prefix cum ar fi \"http://domain.com/\", a doua optiune este "
-"latimea in pixeli, iar a treia este inaltimea."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Afișează un link, campul contine denumirea fisierului,  prima optiune este "
-"un prefix cum ar fi \"http://domain.com/\", a doua optiune este un titlu "
-"pentru link."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Formatează textul ca interogare SQL cu evidențierea sintaxei."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Afișează doar o parte a firului de executie. Prima optiune este un offset "
-"pentru definirea punctului de început a outputului de text (Default 0). A "
-"doua optiune este un offset de text returnat. Daca este gol, returneaza "
-"textul ramas. A treia optiune defineste caracterele care vor fi atasate la "
-"output la returnarea unui substring  (Default: ...) ."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4644,7 +4519,7 @@ msgstr "Nici unul(a)"
 msgid "As defined:"
 msgstr "Conform definiției:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4681,6 +4556,134 @@ msgstr "Trebuie să adăugați cel puțin un cîmp."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Eveniment"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Afișează un link pentru descarcarea datelor binare a unui camp. Prima "
+"optiune este denumirea fisierului binar. A doua optiune este o denumire "
+"posibila pentru un rand de tabel care contine denumirea de fisier. Daca "
+"setati și o a doua optiune, trebuie sa aveti prima optiune setata ca și "
+"empty string"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Afișează o imagine mica clicabila ; optiuni: latime, inaltime in pixeli "
+"(metine dimensiunile originale)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Afișează un link la imagine (direct blob download, i.e.)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"NUMAI LINUX: Lanseaza o aplicatie externa și trimite datele prin input "
+"standard. Returneaza standard output a aplicatiei. Default este Tidy, pentru "
+"listarea codului HTML. Din motive de securitate, va trebui sa editati manual "
+"fisierul libraries/transformations/text_plain__external.inc.php și să "
+"inserați uneltele permise să ruleze. Prima opțiune este apoi numărul de "
+"programe care vor fi utilizate și a doua opțiune sînt  parametri pentru "
+"program. Al treilea parametru, dacă este stabilit la 1 va transforma ieșirea "
+"folosind htmlspecialchars() (implicit este 1). Un al patrulea parametru, "
+"dacă este stabilit la 1, va aplica NOWRAP la conținut, astfel încît întregul "
+"output va fi afișat fără reformatare (implicit 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr "Menține formatarea originală a cîmpului."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Afișează o imagine și un link, campul contine denumirea fisierului; prima "
+"optiune este un prefix cum ar fi \"http://domain.com/\", a doua optiune este "
+"latimea in pixeli, iar a treia este inaltimea."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Afișează un link, campul contine denumirea fisierului,  prima optiune este "
+"un prefix cum ar fi \"http://domain.com/\", a doua optiune este un titlu "
+"pentru link."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Formatează textul ca interogare SQL cu evidențierea sintaxei."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Afișează doar o parte a firului de executie. Prima optiune este un offset "
+"pentru definirea punctului de început a outputului de text (Default 0). A "
+"doua optiune este un offset de text returnat. Daca este gol, returneaza "
+"textul ramas. A treia optiune defineste caracterele care vor fi atasate la "
+"output la returnarea unui substring  (Default: ...) ."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8275,6 +8278,9 @@ msgstr "Denumire VIZIUNE"
 #, fuzzy
 msgid "Rename view to"
 msgstr "Redenumire tabel la"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Vezi imagine/jpeg: inline"
 
 #, fuzzy
 #~| msgid "\"zipped\""
