--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-03-30 23:47+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: slovak <sk@li.org>\n"
@@ -1869,7 +1869,7 @@ msgstr ","
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d.%B, %Y - %H:%M"
 
@@ -3843,119 +3843,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Počet aktívnych (nespiacich) vlákien."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Zobrazí odkaz na stiahnutie dát. Prvý parameter je meno súboru, druhý je "
-"meno stĺpca v tabuľke obsahujúci meno súboru. Ak zadáte druhý parameter, "
-"prvý musí byť prázdny."
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Zobrazí dáta v ich hexadecimálnej forme. Nepovinný parameter určuje po koľko "
-"znakoch je vkladaná medzera (štandardne po dvoch)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Zobrazí náhľad obrázku s odkazom na obrázok; parametre šírka a výška v "
-"bodoch (pomer strán obrázku zostane zachovaný)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Zobrazí odkaz na obrázok (napr. stiahnutie poľa blob)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Zobrazí image/jpeg: inline"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"PLATÍ IBA PRE LINUX: Spustí externú aplikáciu, na jej štandardný vstup pošle "
-"pole a zobrazí výstup programu. Predvolený program je Tidy, ktorý pekne "
-"sformátuje HTML. Z bezpečnostných dôvodov musíte ručne upraviť obsah súboru "
-"libraries/transformations/text_plain__external.inc.php a pridať do neho "
-"povolené aplikácie. Prvý parameter je číslo aplikácie, ktorú chcete použiť a "
-"druhý parametre sú parametre tejto aplikácie. Ak je tretí parameter "
-"nastavený na 1, výstup bude skonvertovaný funkciou htmlspecialchars() "
-"(predvolený je 1). Štvrtý parameter v prípade, že je nastavený na 1 pridá k "
-"výstupnému textu parameter NOWRAP, čím zabezpečí zachovanie formátovania "
-"(predvolený je 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr "Zachová pôvodné formátovanie poľa tak ako je uložené v databáze."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Zobrazí obrázok a odkaz z poľa obsahujúceho odkaz na obrázok. Prvý parameter "
-"je prefix URL (napr. \"http://domena.sk/\"), druhý a tretí parameter určujú "
-"šírku a výšku obrázku."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Zobrazí odkaz z poľa obsahujúceho odkaz. Prvý parameter je prefix URL (napr. "
-"\"http://domena.sk/\"), druhý parameter je text odkazu."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Formátuje text ako SQL príkaz pomocou syntaxového zvýrazňovania."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Zobrazí iba časť reťazca. Prvý parameter je posun od začiatku (predvolený je "
-"0) a druhý určuje dĺžku textu, ktorá sa ma zobraziť, ak nie je zadaný bude "
-"zobrazený zvyšok textu. Tretí parameter určuje znaky, ktoré budú pridané na "
-"koniec skráteného textu (predvolené je ...)."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4604,7 +4491,7 @@ msgstr "Žiadny"
 msgid "As defined:"
 msgstr "Podľa zadania:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4641,6 +4528,122 @@ msgstr "Musíte pridať aspoň jeden stĺpec."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Udalosť"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Zobrazí odkaz na stiahnutie dát. Prvý parameter je meno súboru, druhý je "
+"meno stĺpca v tabuľke obsahujúci meno súboru. Ak zadáte druhý parameter, "
+"prvý musí byť prázdny."
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Zobrazí dáta v ich hexadecimálnej forme. Nepovinný parameter určuje po koľko "
+"znakoch je vkladaná medzera (štandardne po dvoch)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Zobrazí náhľad obrázku s odkazom na obrázok; parametre šírka a výška v "
+"bodoch (pomer strán obrázku zostane zachovaný)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Zobrazí odkaz na obrázok (napr. stiahnutie poľa blob)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"PLATÍ IBA PRE LINUX: Spustí externú aplikáciu, na jej štandardný vstup pošle "
+"pole a zobrazí výstup programu. Predvolený program je Tidy, ktorý pekne "
+"sformátuje HTML. Z bezpečnostných dôvodov musíte ručne upraviť obsah súboru "
+"libraries/transformations/text_plain__external.inc.php a pridať do neho "
+"povolené aplikácie. Prvý parameter je číslo aplikácie, ktorú chcete použiť a "
+"druhý parametre sú parametre tejto aplikácie. Ak je tretí parameter "
+"nastavený na 1, výstup bude skonvertovaný funkciou htmlspecialchars() "
+"(predvolený je 1). Štvrtý parameter v prípade, že je nastavený na 1 pridá k "
+"výstupnému textu parameter NOWRAP, čím zabezpečí zachovanie formátovania "
+"(predvolený je 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr "Zachová pôvodné formátovanie poľa tak ako je uložené v databáze."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Zobrazí obrázok a odkaz z poľa obsahujúceho odkaz na obrázok. Prvý parameter "
+"je prefix URL (napr. \"http://domena.sk/\"), druhý a tretí parameter určujú "
+"šírku a výšku obrázku."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Zobrazí odkaz z poľa obsahujúceho odkaz. Prvý parameter je prefix URL (napr. "
+"\"http://domena.sk/\"), druhý parameter je text odkazu."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Formátuje text ako SQL príkaz pomocou syntaxového zvýrazňovania."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Zobrazí iba časť reťazca. Prvý parameter je posun od začiatku (predvolený je "
+"0) a druhý určuje dĺžku textu, ktorá sa ma zobraziť, ak nie je zadaný bude "
+"zobrazený zvyšok textu. Tretí parameter určuje znaky, ktoré budú pridané na "
+"koniec skráteného textu (predvolené je ...)."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8236,6 +8239,9 @@ msgstr ""
 #, fuzzy
 msgid "Rename view to"
 msgstr "Premenovať tabuľku na"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Zobrazí image/jpeg: inline"
 
 #, fuzzy
 #~| msgid "\"zipped\""
