--- a/po/sl.po
+++ b/po/sl.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-05-22 22:51+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
@@ -1812,7 +1812,7 @@ msgstr ","
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d %B %Y ob %H.%M"
 
@@ -3675,123 +3675,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Število niti, ki ne spijo."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Prikaži povezavo za prenos dvojiških podatkov polja. Prva možnost je ime "
-"dvojiške datoteke. Druga možnost je možno ime polja v vrstici tabele, ki "
-"vsebuje to ime datoteke. Če vnesete drugo možnost, mora biti prva možnost "
-"prazna."
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Prikaže šestnajstiško predstavljene podatke. Izbirni prvi parameter določa "
-"pogostost dodajanja presledkov (privzeto na 2 polzloga)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Prikaže sličico, na katero lahko kliknete. Možnosti sta največja širina in "
-"višina v slikovnih pikah. Prvotna razmerja se obdržijo."
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Pokaže povezavo na grafiko (neposredni BLOB prenos, ipd.)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Pokaži sliko/jpeg: vključeno"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"SAMO ZA LINUX: Zažene zunanjo aplikacijo in podaja podatke za fielddata "
-"preko standardnega vhoda. Vrne standardni izhod aplikacije. Privzeto je "
-"Tidy, za tiskanje HTML-kode. Zaradi varnostnih razlogov morate ročno urediti "
-"datoteko libraries/transformations/text_plain__external.inc.php in vstaviti "
-"orodja za zaganjanje. Prva možnost je številka programa, ki ga želite "
-"uporabiti, druga možnost pa so parametri za program. Če tretji parameter "
-"nastavite na 1, bo s pomočjo htmlspecialchars() pretvoril izhod (Privzeto: "
-"1). Če nastavite četrti parameter na 1, bo v celico z vsebino (content cell) "
-"vnesel NOWRAP in tako prikazal celoten izhod brez preoblikovanja (Privzeto: "
-"1)."
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"Prikaže vsebino polja takšno, kot je, brez obdelave s htmlspecialchars(). "
-"Zatorej se za polje predvideva, da vsebuje veljaven HTML."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Prikaže sliko in povezavo; polje vsebuje ime datoteke. Prva možnost je "
-"predpona URL, kot je \"http://www.domena.com/\". Druga in tretja možnost sta "
-"širina in višina v slikovnih pikah."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Prikaže povezavo; polje vsebuje ime datoteke. Prva možnost je predpona URL, "
-"kot je \"http://www.domena.com/\". Druga možnost je ime povezave."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Oblikuje besedilo kot poizvedbo SQL z označevanjem skladnje."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Vrne le del niza. Prva možnost je odmik, ki določa, kje se bo začelo "
-"prikazano besedilo (Privzeto: 0). Druga možnost je odmik, ki pove, koliko "
-"besedila bo prikazanega. Če ni določen, bo izpisano vse preostalo besedilo. "
-"Tretja možnost pa določa, kateri znaki bodo pripeti vrnjenemu podnizu "
-"(Privzeto: \"...\")."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4439,7 +4322,7 @@ msgstr "Brez"
 msgid "As defined:"
 msgstr "Kot določeno:"
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4476,6 +4359,126 @@ msgstr "Dodati morate vsaj eno polje."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Dogodek"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Prikaži povezavo za prenos dvojiških podatkov polja. Prva možnost je ime "
+"dvojiške datoteke. Druga možnost je možno ime polja v vrstici tabele, ki "
+"vsebuje to ime datoteke. Če vnesete drugo možnost, mora biti prva možnost "
+"prazna."
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Prikaže šestnajstiško predstavljene podatke. Izbirni prvi parameter določa "
+"pogostost dodajanja presledkov (privzeto na 2 polzloga)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Prikaže sličico, na katero lahko kliknete. Možnosti sta največja širina in "
+"višina v slikovnih pikah. Prvotna razmerja se obdržijo."
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Pokaže povezavo na grafiko (neposredni BLOB prenos, ipd.)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"SAMO ZA LINUX: Zažene zunanjo aplikacijo in podaja podatke za fielddata "
+"preko standardnega vhoda. Vrne standardni izhod aplikacije. Privzeto je "
+"Tidy, za tiskanje HTML-kode. Zaradi varnostnih razlogov morate ročno urediti "
+"datoteko libraries/transformations/text_plain__external.inc.php in vstaviti "
+"orodja za zaganjanje. Prva možnost je številka programa, ki ga želite "
+"uporabiti, druga možnost pa so parametri za program. Če tretji parameter "
+"nastavite na 1, bo s pomočjo htmlspecialchars() pretvoril izhod (Privzeto: "
+"1). Če nastavite četrti parameter na 1, bo v celico z vsebino (content cell) "
+"vnesel NOWRAP in tako prikazal celoten izhod brez preoblikovanja (Privzeto: "
+"1)."
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"Prikaže vsebino polja takšno, kot je, brez obdelave s htmlspecialchars(). "
+"Zatorej se za polje predvideva, da vsebuje veljaven HTML."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Prikaže sliko in povezavo; polje vsebuje ime datoteke. Prva možnost je "
+"predpona URL, kot je \"http://www.domena.com/\". Druga in tretja možnost sta "
+"širina in višina v slikovnih pikah."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Prikaže povezavo; polje vsebuje ime datoteke. Prva možnost je predpona URL, "
+"kot je \"http://www.domena.com/\". Druga možnost je ime povezave."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Oblikuje besedilo kot poizvedbo SQL z označevanjem skladnje."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Vrne le del niza. Prva možnost je odmik, ki določa, kje se bo začelo "
+"prikazano besedilo (Privzeto: 0). Druga možnost je odmik, ki pove, koliko "
+"besedila bo prikazanega. Če ni določen, bo izpisano vse preostalo besedilo. "
+"Tretja možnost pa določa, kateri znaki bodo pripeti vrnjenemu podnizu "
+"(Privzeto: \"...\")."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8060,6 +8063,9 @@ msgstr "Ime VIEW"
 #: view_operations.php:93
 msgid "Rename view to"
 msgstr "Preimenuj pogled v"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Pokaži sliko/jpeg: vključeno"
 
 #~ msgid "zipped"
 #~ msgstr "zipano"
