--- a/po/sq.po
+++ b/po/sq.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-05-19 13:02+0200\n"
 "Last-Translator: Laurent <laurenti@alblinux.net>\n"
 "Language-Team: albanian <sq@li.org>\n"
@@ -1840,7 +1840,7 @@ msgstr ","
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d %B, %Y at %I:%M %p"
 
@@ -3677,121 +3677,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr ""
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Shfaq një lidhje për të shkarkuar të dhënat binare të një fushe. Mundësia e "
-"parë është emri i file binar. Opcioni i dytë është emri i mundshëm i fushës "
-"së rreshtit të tabelës që përmban emrin e file. Nëse jepni opcionin e dytë, "
-"opcioni i parë duhet të jetë një stringë bosh"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Shfaq një miniaturë të klikueshme; mundësitë: gjërësia, lartësia në pixels "
-"(ruan proporcionin origjinal)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Shfaq një lidhje për tek kjo figurë (download blob direkt, p.sh.)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Shiko figurën/jpeg: në linjë"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"VETËM PËR LINUX: Lëshon një program të jashtëm dhe plotëson të dhënat e "
-"fushave me anë të standard input. Jep si rezultat standard output e "
-"programit. Vendosja default është Tidy, për të printuar si duhet kodin HTML. "
-"Për arsye sigurie, do t'ju duhet të ndryshoni file libraries/transformations/"
-"text_plain__external.inc.php dhe të shkruani instrumentet që lejoni të "
-"përdoren. Mundësia e parë pra është numri i programit që dëshironi të "
-"përdorni dhe e dyta janë parametrat për programin. Parametri i tretë, n.q.s. "
-"i vendosur në 1 do të konvertojë output duke përdorur htmlspecialchars() "
-"(Prezgjedhur: 1). Një parametër i katërt, po të jetë vendosur në 1 do t'i "
-"shtojë një NOWRAP përmbajtjes së qelisë kështu që output komplet do të "
-"shfaqet pa u riformatuar (Default: 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr ""
-"Konservon formatimin origjinal të fushës. Nuk aplikohet asnjë Escaping."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Shfaq një figurë dhe një link, fusha përmban emrin e file; opcioni i parë "
-"është një prefiks si \"http://domain.com/\", opcioni i dytë është gjërësia "
-"në pixels, i treti është lartësia."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Shfaq një link, fusha përmban emrin e file; opcioni i parë është një prefiks "
-"si \"http://domain.com/\", opcioni i dytë është një titull për lidhjen."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr ""
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Shfaq vetëm një pjesë të string-ës. Opcioni i parë është offset-i që shërben "
-"për të përcaktuar ku fillon output i tekstit tuaj (Default 0). Opcioni i "
-"dytë është një offset që tregon se sa tekst kthehet. Po të jetë bosh, kthen "
-"të gjithë tekstin e mbetur. Opcioni i tretë përcakton çfarë karakteresh do "
-"të shtohen në fund të output kur kthehet një nën-string-ë (Default: ...) ."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4443,7 +4328,7 @@ msgstr "Asnjë lloj"
 msgid "As defined:"
 msgstr ""
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4481,6 +4366,124 @@ msgstr ""
 #, fuzzy
 msgid "Event"
 msgstr "Dërguar"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Shfaq një lidhje për të shkarkuar të dhënat binare të një fushe. Mundësia e "
+"parë është emri i file binar. Opcioni i dytë është emri i mundshëm i fushës "
+"së rreshtit të tabelës që përmban emrin e file. Nëse jepni opcionin e dytë, "
+"opcioni i parë duhet të jetë një stringë bosh"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Shfaq një miniaturë të klikueshme; mundësitë: gjërësia, lartësia në pixels "
+"(ruan proporcionin origjinal)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Shfaq një lidhje për tek kjo figurë (download blob direkt, p.sh.)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"VETËM PËR LINUX: Lëshon një program të jashtëm dhe plotëson të dhënat e "
+"fushave me anë të standard input. Jep si rezultat standard output e "
+"programit. Vendosja default është Tidy, për të printuar si duhet kodin HTML. "
+"Për arsye sigurie, do t'ju duhet të ndryshoni file libraries/transformations/"
+"text_plain__external.inc.php dhe të shkruani instrumentet që lejoni të "
+"përdoren. Mundësia e parë pra është numri i programit që dëshironi të "
+"përdorni dhe e dyta janë parametrat për programin. Parametri i tretë, n.q.s. "
+"i vendosur në 1 do të konvertojë output duke përdorur htmlspecialchars() "
+"(Prezgjedhur: 1). Një parametër i katërt, po të jetë vendosur në 1 do t'i "
+"shtojë një NOWRAP përmbajtjes së qelisë kështu që output komplet do të "
+"shfaqet pa u riformatuar (Default: 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr ""
+"Konservon formatimin origjinal të fushës. Nuk aplikohet asnjë Escaping."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Shfaq një figurë dhe një link, fusha përmban emrin e file; opcioni i parë "
+"është një prefiks si \"http://domain.com/\", opcioni i dytë është gjërësia "
+"në pixels, i treti është lartësia."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Shfaq një link, fusha përmban emrin e file; opcioni i parë është një prefiks "
+"si \"http://domain.com/\", opcioni i dytë është një titull për lidhjen."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr ""
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Shfaq vetëm një pjesë të string-ës. Opcioni i parë është offset-i që shërben "
+"për të përcaktuar ku fillon output i tekstit tuaj (Default 0). Opcioni i "
+"dytë është një offset që tregon se sa tekst kthehet. Po të jetë bosh, kthen "
+"të gjithë tekstin e mbetur. Opcioni i tretë përcakton çfarë karakteresh do "
+"të shtohen në fund të output kur kthehet një nën-string-ë (Default: ...) ."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8036,6 +8039,9 @@ msgstr ""
 #, fuzzy
 msgid "Rename view to"
 msgstr "Riemërto tabelën në"
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Shiko figurën/jpeg: në linjë"
 
 #, fuzzy
 #~| msgid "\"zipped\""
