--- a/po/sr@latin.po
+++ b/po/sr@latin.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
-"POT-Creation-Date: 2010-05-24 11:33+0200\n"
+"POT-Creation-Date: 2010-05-24 12:05+0200\n"
 "PO-Revision-Date: 2010-03-30 23:47+0200\n"
 "Last-Translator: Michal <michal@cihar.com>\n"
 "Language-Team: serbian_latin <sr@latin@li.org>\n"
@@ -1868,7 +1868,7 @@ msgstr "."
 
 #. l10n: See http://www.php.net/manual/en/function.strftime.php to define the format string
 #: libraries/common.lib.php:1596
-#: libraries/transformations/text_plain__dateformat.inc.php:28
+#: libraries/transformations/text_plain__dateformat.inc.php:34
 msgid "%B %d, %Y at %I:%M %p"
 msgstr "%d. %B %Y. u %H:%M"
 
@@ -3842,128 +3842,6 @@ msgstr ""
 msgid "The number of threads that are not sleeping."
 msgstr "Broj niti koje nisu uspavane."
 
-#: libraries/messages.inc.php:133
-msgid ""
-"Displays a link to download the binary data of the field. You can use the "
-"first option to specify the filename, or use the second option as the name "
-"of a field which contains the filename. If you use the second option, you "
-"need to set the first option to the empty string."
-msgstr ""
-"Prikazuje vezu za preuzimanje binarnih podataka za polje. Prva opcija je ime "
-"binarne datoteke. Druga opcija je moguće ime polja reda tabele koji sadrži "
-"ime datoteke. Ako date drugu opciju, prva mora biti postavljena na prazan "
-"string"
-
-#: libraries/messages.inc.php:134
-msgid ""
-"Displays hexadecimal representation of data. Optional first parameter "
-"specifies how often space will be added (defaults to 2 nibbles)."
-msgstr ""
-"Prikazuje heksadecimalni prikaz podataka. Opcioni prvi parametar određuje "
-"koliko često se dodaje prazno mesto (podrazumevano svaka 2 nibla)."
-
-#: libraries/messages.inc.php:135
-msgid ""
-"Displays a clickable thumbnail. The options are the maximum width and height "
-"in pixels. The original aspect ratio is preserved."
-msgstr ""
-"Prikazuje umanjenu sliku na koju je moguće kliknuti; opcije: širina, visina "
-"u pikselima (čuva originalni odnos)"
-
-#: libraries/messages.inc.php:136
-msgid "Displays a link to download this image."
-msgstr "Prikazuje link ka ovoj snimci (npr. direktno preuzimanje iz BLOB-a)."
-
-#: libraries/messages.inc.php:137
-msgid "See image/jpeg: inline"
-msgstr "Prikaži JPEG slike na strani"
-
-#: libraries/messages.inc.php:138
-msgid ""
-"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
-"formatted date. The first option is the offset (in hours) which will be "
-"added to the timestamp (Default: 0). Use second option to specify a "
-"different date/time format string. Third option determines whether you want "
-"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
-"According to that, date format has different value - for \"local\" see the "
-"documentation for PHP's strftime() function and for \"utc\" it is done using "
-"gmdate() function."
-msgstr ""
-"Prikazuje TIME, TIMESTAMP, DATETIME ili polje sa numeričkom juniks "
-"vremenskom oznakom (timestamp) kao formatirani datum. Prva opcija je pomeraj "
-"(u satima) koji se dodaje vremenskoj oznaci (podrazumevamo: 0). Drugu opciju "
-"koristitte da odredite drugačiji string za formatiranje datuma/vremena. "
-"Treća opcija određuje da li želite da vidite lokalni ili UTC datum "
-"(koristite stringove \"local\" ili \"utc\" za to). U skladu sa tim, format "
-"datuma ima različite vrednosti - za \"local\" pogledajte PHP-ovu "
-"dokumentaciju za funkciju strftime() dok je za \"utc\" to urađeno "
-"korišćenjem fukcije gmdate()."
-
-#: libraries/messages.inc.php:139
-msgid ""
-"LINUX ONLY: Launches an external application and feeds it the field data via "
-"standard input. Returns the standard output of the application. The default "
-"is Tidy, to pretty-print HTML code. For security reasons, you have to "
-"manually edit the file libraries/transformations/text_plain__external.inc."
-"php and list the tools you want to make available. The first option is then "
-"the number of the program you want to use and the second option is the "
-"parameters for the program. The third option, if set to 1, will convert the "
-"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
-"will prevent wrapping and ensure that the output appears all on one line "
-"(Default 1)."
-msgstr ""
-"SAMO LINUX: Pokreće eksternu aplikaciju i popunjava podatke u poljima preko "
-"standardnog ulaza. Vraća standardni izlaz aplikacije. Podrazumevano je Tidy, "
-"za lepši prikaz HTML koda. Zbog sigurnosnih razloga, morate ručno izmeniti "
-"datoteku libraries/transformations/text_plain__external.inc.php i dodati "
-"alate koje želite da koristite. Prva opcija je broj programa koje želite da "
-"koristite, a druga su parametri programa. Ako se treći parametar postavi na "
-"1 izlaz će biti konvertovan koristeći htmlspecialchars() (podrazumevano je "
-"1). Ako je četvrti parametar postavljen na 1, NOWRAP će biti dodato ćeliji "
-"sa sadržajem tako da će izlaz biti prikazan bez izmena. (podrazumevano 1)"
-
-#: libraries/messages.inc.php:140
-msgid ""
-"Displays the contents of the field as-is, without running it through "
-"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
-msgstr "Čuva originalno formatiranje polja. Escaping se ne vrši."
-
-#: libraries/messages.inc.php:141
-msgid ""
-"Displays an image and a link; the field contains the filename. The first "
-"option is a URL prefix like \"http://www.example.com/\". The second and "
-"third options are the width and the height in pixels."
-msgstr ""
-"Prikazuje sliku i link, polje sadrži naziv datoteke; prva opcija je prefiks "
-"kao \"http://domain.com/\", druga opcija je širina u pikselima, treća je "
-"visina."
-
-#: libraries/messages.inc.php:142
-msgid ""
-"Displays a link; the field contains the filename. The first option is a URL "
-"prefix like \"http://www.example.com/\". The second option is a title for "
-"the link."
-msgstr ""
-"Prikazuje link, polje sadrži naziv datoteke; prva opcija je prefiks kao "
-"\"http://domain.com/\", druga opcija je naslov za link."
-
-#: libraries/messages.inc.php:143
-msgid "Formats text as SQL query with syntax highlighting."
-msgstr "Formatira tekst kao SQL upit sa obeležavanjem sintakse."
-
-#: libraries/messages.inc.php:144
-msgid ""
-"Displays a part of a string. The first option is the number of characters to "
-"skip from the beginning of the string (Default 0). The second option is the "
-"number of characters to return (Default: until end of string). The third "
-"option is the string to append and/or prepend when truncation occurs "
-"(Default: \"...\")."
-msgstr ""
-"Pokazuje deo stringa. Prva opcija je broj znakova koje treba preskočiti od "
-"početka stringa (podrazumevano 0). Druga opcija je broj vraćenih znakova "
-"(podrazumevano: do kraja stringa). Treća opcija je string koji se dodaje "
-"kada dođe do odsecanja (podrazumevano: ...) ."
-
 #: libraries/mult_submits.inc.php:76 libraries/tbl_properties.inc.php:513
 #: tbl_structure.php:29 tbl_structure.php:153 tbl_structure.php:157
 #: tbl_structure.php:473
@@ -4610,7 +4488,7 @@ msgstr "nema"
 msgid "As defined:"
 msgstr ""
 
-#: libraries/tbl_properties.inc.php:580 transformation_overview.php:60
+#: libraries/tbl_properties.inc.php:580 transformation_overview.php:58
 #, php-format
 msgid ""
 "No description is available for this transformation.<br />Please ask the "
@@ -4646,6 +4524,131 @@ msgstr "Morate dodati barem jedno polje."
 #: libraries/tbl_triggers.lib.php:29
 msgid "Event"
 msgstr "Događaji"
+
+#: libraries/transformations/application_octetstream__download.inc.php:10
+msgid ""
+"Displays a link to download the binary data of the field. You can use the "
+"first option to specify the filename, or use the second option as the name "
+"of a field which contains the filename. If you use the second option, you "
+"need to set the first option to the empty string."
+msgstr ""
+"Prikazuje vezu za preuzimanje binarnih podataka za polje. Prva opcija je ime "
+"binarne datoteke. Druga opcija je moguće ime polja reda tabele koji sadrži "
+"ime datoteke. Ako date drugu opciju, prva mora biti postavljena na prazan "
+"string"
+
+#: libraries/transformations/application_octetstream__hex.inc.php:10
+msgid ""
+"Displays hexadecimal representation of data. Optional first parameter "
+"specifies how often space will be added (defaults to 2 nibbles)."
+msgstr ""
+"Prikazuje heksadecimalni prikaz podataka. Opcioni prvi parametar određuje "
+"koliko često se dodaje prazno mesto (podrazumevano svaka 2 nibla)."
+
+#: libraries/transformations/image_jpeg__inline.inc.php:10
+#: libraries/transformations/image_png__inline.inc.php:10
+msgid ""
+"Displays a clickable thumbnail. The options are the maximum width and height "
+"in pixels. The original aspect ratio is preserved."
+msgstr ""
+"Prikazuje umanjenu sliku na koju je moguće kliknuti; opcije: širina, visina "
+"u pikselima (čuva originalni odnos)"
+
+#: libraries/transformations/image_jpeg__link.inc.php:10
+msgid "Displays a link to download this image."
+msgstr "Prikazuje link ka ovoj snimci (npr. direktno preuzimanje iz BLOB-a)."
+
+#: libraries/transformations/text_plain__dateformat.inc.php:10
+msgid ""
+"Displays a TIME, TIMESTAMP, DATETIME or numeric unix timestamp field as "
+"formatted date. The first option is the offset (in hours) which will be "
+"added to the timestamp (Default: 0). Use second option to specify a "
+"different date/time format string. Third option determines whether you want "
+"to see local date or UTC one (use \"local\" or \"utc\" strings) for that. "
+"According to that, date format has different value - for \"local\" see the "
+"documentation for PHP's strftime() function and for \"utc\" it is done using "
+"gmdate() function."
+msgstr ""
+"Prikazuje TIME, TIMESTAMP, DATETIME ili polje sa numeričkom juniks "
+"vremenskom oznakom (timestamp) kao formatirani datum. Prva opcija je pomeraj "
+"(u satima) koji se dodaje vremenskoj oznaci (podrazumevamo: 0). Drugu opciju "
+"koristitte da odredite drugačiji string za formatiranje datuma/vremena. "
+"Treća opcija određuje da li želite da vidite lokalni ili UTC datum "
+"(koristite stringove \"local\" ili \"utc\" za to). U skladu sa tim, format "
+"datuma ima različite vrednosti - za \"local\" pogledajte PHP-ovu "
+"dokumentaciju za funkciju strftime() dok je za \"utc\" to urađeno "
+"korišćenjem fukcije gmdate()."
+
+#: libraries/transformations/text_plain__external.inc.php:10
+msgid ""
+"LINUX ONLY: Launches an external application and feeds it the field data via "
+"standard input. Returns the standard output of the application. The default "
+"is Tidy, to pretty-print HTML code. For security reasons, you have to "
+"manually edit the file libraries/transformations/text_plain__external.inc."
+"php and list the tools you want to make available. The first option is then "
+"the number of the program you want to use and the second option is the "
+"parameters for the program. The third option, if set to 1, will convert the "
+"output using htmlspecialchars() (Default 1). The fourth option, if set to 1, "
+"will prevent wrapping and ensure that the output appears all on one line "
+"(Default 1)."
+msgstr ""
+"SAMO LINUX: Pokreće eksternu aplikaciju i popunjava podatke u poljima preko "
+"standardnog ulaza. Vraća standardni izlaz aplikacije. Podrazumevano je Tidy, "
+"za lepši prikaz HTML koda. Zbog sigurnosnih razloga, morate ručno izmeniti "
+"datoteku libraries/transformations/text_plain__external.inc.php i dodati "
+"alate koje želite da koristite. Prva opcija je broj programa koje želite da "
+"koristite, a druga su parametri programa. Ako se treći parametar postavi na "
+"1 izlaz će biti konvertovan koristeći htmlspecialchars() (podrazumevano je "
+"1). Ako je četvrti parametar postavljen na 1, NOWRAP će biti dodato ćeliji "
+"sa sadržajem tako da će izlaz biti prikazan bez izmena. (podrazumevano 1)"
+
+#: libraries/transformations/text_plain__formatted.inc.php:10
+msgid ""
+"Displays the contents of the field as-is, without running it through "
+"htmlspecialchars(). That is, the field is assumed to contain valid HTML."
+msgstr "Čuva originalno formatiranje polja. Escaping se ne vrši."
+
+#: libraries/transformations/text_plain__imagelink.inc.php:10
+msgid ""
+"Displays an image and a link; the field contains the filename. The first "
+"option is a URL prefix like \"http://www.example.com/\". The second and "
+"third options are the width and the height in pixels."
+msgstr ""
+"Prikazuje sliku i link, polje sadrži naziv datoteke; prva opcija je prefiks "
+"kao \"http://domain.com/\", druga opcija je širina u pikselima, treća je "
+"visina."
+
+#: libraries/transformations/text_plain__link.inc.php:10
+msgid ""
+"Displays a link; the field contains the filename. The first option is a URL "
+"prefix like \"http://www.example.com/\". The second option is a title for "
+"the link."
+msgstr ""
+"Prikazuje link, polje sadrži naziv datoteke; prva opcija je prefiks kao "
+"\"http://domain.com/\", druga opcija je naslov za link."
+
+#: libraries/transformations/text_plain__longToIpv4.inc.php:10
+msgid ""
+"Converts an (IPv4) Internet network address into a string in Internet "
+"standard dotted format."
+msgstr ""
+
+#: libraries/transformations/text_plain__sql.inc.php:10
+msgid "Formats text as SQL query with syntax highlighting."
+msgstr "Formatira tekst kao SQL upit sa obeležavanjem sintakse."
+
+#: libraries/transformations/text_plain__substr.inc.php:10
+msgid ""
+"Displays a part of a string. The first option is the number of characters to "
+"skip from the beginning of the string (Default 0). The second option is the "
+"number of characters to return (Default: until end of string). The third "
+"option is the string to append and/or prepend when truncation occurs "
+"(Default: \"...\")."
+msgstr ""
+"Pokazuje deo stringa. Prva opcija je broj znakova koje treba preskočiti od "
+"početka stringa (podrazumevano 0). Druga opcija je broj vraćenih znakova "
+"(podrazumevano: do kraja stringa). Treća opcija je string koji se dodaje "
+"kada dođe do odsecanja (podrazumevano: ...) ."
 
 #: libraries/zip_extension.lib.php:26
 msgid "No files found inside ZIP archive!"
@@ -8222,6 +8225,9 @@ msgstr "naziv za VIEW"
 #, fuzzy
 msgid "Rename view to"
 msgstr "Promeni ime tabele u "
+
+#~ msgid "See image/jpeg: inline"
+#~ msgstr "Prikaži JPEG slike na strani"
 
 #, fuzzy
 #~| msgid "\"zipped\""
